--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -4374,219 +4374,262 @@ Design eines Codes Kompromisse geschlossen werden.
 % Bemerkung 12.1
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:12.1}
-Wir ändern unsere Sichtweise!
-
-\emph{Bisher:} $L\mid K$ Körpererweiterung $\hookrightarrow b \in L$ algebraisch über $K \Rightarrow$ Minimalpolynom $\mu$ von $b$ über $K$.
-
-\emph{Jetzt:} $K$ Körper, $\phi \in K[X]$ $\Rightarrow$ konstruiere Erweiterungskörper $L \supseteq K$ und Element $b \in L$ mit $\phi(b) = 0$.
+  Wir ändern unsere Sichtweise! Bisher haben wir $L\mid K$ als
+  Körpererweiterung mit einem algebraischen Element $b \in L$ über $K$
+  betrachtet. Dann ergab sich das Minimalpolynom $\mu$ von $b$ über
+  $K$. Jetzt ist $K$ ein Körper und $\phi \in K[X]$ ein Polynom. Dann
+  konstruieren wir einen Erweiterungskörper $L \supseteq K$ und
+  Element $b \in L$ mit $\phi(b) = 0$.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
 % Beispiel 12.1
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}\label{bsp:12.1}
-Man kommt von $\R$ zu $\C$ dadurch, dass man Nullstellen von $X^2 + 1 = 0$ sucht.
+  Man kommt von $\R$ zu $\C$ dadurch, dass man Nullstellen von $X^2 +
+  1 = 0$ sucht.
 \end{bsp}
 
 %%%%%%%%%%%%%%%%%%%
 % Satz 12.1
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:12.1}
-Sei $K$ Körper und $\phi \in K[X]$ irreduzibel.
-Dann existiert immer ein Ergänzungskörper $L \supseteq K$, in dem $\phi$ eine Nullstelle hat.
+  Sei $K$ Körper und $\phi \in K[X]$ irreduzibel.  Dann existiert
+  immer ein Ergänzungskörper $L \supseteq K$, in dem $\phi$ eine
+  Nullstelle hat.
+  \begin{beweis}
+    Gegebenenfalls ist $K(b) \cong K[X] / (\phi)$. Daher werden wir
+    versuchen, $L$ auf diese Weise zu konstruieren. Da $\phi \in K[X]$
+    irreduzibel ist, ist $\widetilde{L} \coloneqq K[X]/(\phi)$ ein
+    Körper und $\sigma\colon K\rightarrow  \widetilde{L}$ mit
+    $a\mapsto a + (\phi)$ ein Ringhomomorphismus.
+
+    Für $0 \neq a \in K$ ist dabei $\sigma(a)\sigma(a^{-1}) =
+    \sigma(aa^{-1}) = \sigma(1) = 1 + (\phi) = 1_{\widetilde{L}}$,
+    d.\,h. $\sigma(a) \neq 0$. Daher ist $\widetilde{K} \coloneqq
+    \sigma(K)$ ein zu $K$ isomorpher Körper.
+
+    Sei $Y$ eine neue Unbestimmte. Dann ist die Abbildung $\Phi\colon
+    K[X] \rightarrow \widetilde{K}[Y]$ mit $\sum_{i = 0}^{\infty}
+    a_iX^i\mapsto \sum_{i = 0}^{\infty}\sigma(a_i)Y^i$ ein
+    Ringhomomorphismus. Daher ist $\widetilde{\phi} = Y^n + (a_{n-1} +
+    (\phi))Y^{n-1} + \dotsb + (a_1 + (\phi))Y + (a_0 + (\phi))$. Für
+    $\widetilde{b} \coloneqq X + (\phi) \in \widetilde{L}$ gilt also:
+    \begin{align*}
+      \widetilde{\phi}(\widetilde{b}) &= (X + (\phi))^n + (a_{n-1} +
+      (\phi))(X + (\phi))^{n-1}\\
+      &\qquad+ \dotsb + (a_1 + (\phi))(X + (\phi)) + (a_0 + (\phi))\\
+      &= X^n + a_{n-1}X^{n-1} + \dotsb + a_1X + a_0 + (\phi)\\
+      &= \phi + (\phi) = 0
+    \end{align*}
+    Daher erfüllen der zu $K$ isomorphe Körper $\widetilde{K}$ und das
+    $\phi$ entsprechende Polynom $\widetilde{\phi} \in
+    \widetilde{K}[Y]$ die Behauptung des Satzes. Analoges gilt also
+    für $K$ und $\phi$.
+  \end{beweis}
 \end{satz}
 
-%%%%%%%%%%%%%%%%%%%
-% Beweis
-%%%%%%%%%%%%%%%%%%%
-\begin{beweis}
-(Gegebenenfalls ist $K(b) \cong K[X] / (\phi)$; wir werden Daher versuchen, $L$ auf diese Weise zu konstruieren.)\\
-Da $\phi \in K[X]$ irreduzibel ist, ist $\widetilde{L} \coloneqq K[X]/(\phi)$ ein Körper, und $\sigma\colon K\rightarrow  \widetilde{L}$, $a\mapsto a + (\phi)$, ein Ringhomomorphismus.\\
-Für $0 \neq a \in K$ ist dabei $\sigma(a)\sigma(a^{-1}) = \sigma(aa^{-1}) = \sigma(1) = 1 + (\phi) = 1_{\widetilde{L}}$, d.\,h. $\sigma(a) \neq 0$.\\
-Daher ist $\widetilde{K} \coloneqq \sigma(K)$ ein zu $K$ isomorpher Körper.\\
-Sei $Y$ eine neue Unbestimmte.
-Dann ist die Abbildung $\Phi\colon K[X] \rightarrow  \widetilde{K}[Y]$, $\sum_{i = 0}^{\infty}a_iX^i\mapsto \sum_{i = 0}^{\infty}\sigma(a_i)Y^i$ ein Ringhomomorphismus.
-Daher ist $\widetilde{\phi} = Y^n + (a_{n-1} + (\phi))Y^{n-1} + \dotsb + (a_1 + (\phi))Y + (a_0 + (\phi))$.\\
-Für $\widetilde{b} \coloneqq X + (\phi) \in \widetilde{L}$ gilt also:
-\begin{gather*}\begin{array}{lcl}
-	\widetilde{\phi}(\widetilde{b}) & = & (X + (\phi))^n + (a_{n-1} + (\phi))(X + (\phi))^{n-1} + \dotsb + (a_1 + (\phi))(X + (\phi)) + (a_0 + (\phi))\\
-	& = & X^n + a_{n-1}X^{n-1} + \dotsb + a_1X + a_0 + (\phi)\\
-	& = & \phi + (\phi) = 0
-\end{array}\end{gather*}
-Daher erfüllen der zu $K$ isomorphe Körper $\widetilde{K}$ und das $\phi$ entsprechende Polynom $\widetilde{\phi} \in \widetilde{K}[Y]$ die Behauptung des Satzes.
-Analoges gilt also für $K$ und $\phi$.
-\end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
 % Satz 12.2
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:12.2}
-Sei $K$ ein Körper und $\phi \in K[X]$.
-Dann existiert ein Erweiterungskörper $L \supseteq K$, der Zerfällungskörper von $\phi$ über $K$ ist.
+  Sei $K$ ein Körper und $\phi \in K[X]$. Dann existiert ein
+  Erweiterungskörper $L \supseteq K$, der Zerfällungskörper von $\phi$
+  über $K$ ist.
+  \begin{beweis}
+    Wir führen Induktion nach $n \coloneqq \deg{\phi}$ durch. Im Fall
+    $n \leq 0$ kann man $L \coloneqq K$ nehmen. Sei also $n > 0$. Nach
+    dem \autoref{satz:12.1} existiert ein Erweiterungskörper $F
+    \supseteq K$, in dem $\phi$ eine Nullstelle $b$ hat. \OE{} ist $F
+    = K(b)$. Schreibe $\phi = (X - b)\psi$ mit $\psi \in F[X]$.  Wegen
+    $\deg{\psi} = n-1$ existiert nach Induktion ein Erweiterungskörper
+    $L \supseteq F$, der Zerfällungskörper von $\psi$ über $F$ ist.
+    Dann ist $L$ auch Zerfällungskörper von $\phi$ über $K$.
+  \end{beweis}
 \end{satz}
 
-%%%%%%%%%%%%%%%%%%%
-% Beweis
-%%%%%%%%%%%%%%%%%%%
-\begin{beweis}
-(Induktion nach $n \coloneqq \deg{\phi}$)\\
-Im Fall $n \leq 0$ kann man $L \coloneqq K$ nehmen.
-Sei also $n > 0$.
-Nach \autoref{satz:12.1} existiert ein Erweiterungskörper $F \supseteq K$, in dem $\phi$ eine Nullstelle $b$ hat;
-\OE{} $F = K(b)$.
-Schreibe $\phi = (X - b)\psi$ mit $\psi \in F[X]$.
-Wegen $\deg{\psi} = n-1$ existiert nach Induktion ein Erweiterungskörper $L \supseteq F$, der Zerfällungskörper von $\psi$ über $F$ ist.
-Dann ist $L$ auch Zerfällungskörper von $\phi$ über $K$.
-\end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
 % Satz 12.3
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:12.3}
-Für einen Körper $K$ und ein irreduzibles Polynom $\pi \in K[X]$ sind äquivalent:
-\begin{enumerate}[(1)]
-	\item $\pi$ hat in einem Erweiterungskörper $L \supseteq K$ eine mehrfache Nullstelle $b$
-	\item $\pi' = 0$.
-\end{enumerate}
+  Für einen Körper $K$ und ein irreduzibles Polynom $\pi \in K[X]$
+  sind äquivalent:
+  \begin{enumerate}[(1)]
+  \item $\pi$ hat in einem Erweiterungskörper $L \supseteq K$ eine
+    mehrfache Nullstelle $b$.
+  \item $\pi' = 0$.
+  \end{enumerate}
+  \begin{beweis}
+    \begin{itemize}
+    \item[$(1) \Rightarrow (2)$:] Sei (1) erfüllt. Dann ist $b$ auch
+      Nullstelle von $\pi'$. Folglich ist $X - b\mid\pi$ und $X -
+      b\mid\pi'$ in $L[X]$. Daher sind $\pi$, $\pi'$ nicht teilerfremd
+      in $L[X]$ und $\pi$ sowie $\pi'$ auch in $K[X]$ nicht
+      teilerfremd. Da $\pi$ irreduzibel ist, folgt
+      $\pi\mid\pi'$. Wegen $\deg{\pi'} < \deg{\pi}$ folgt weiter:
+      $\pi' = 0$.
+    \item[$(2) \Rightarrow (1)$:] Sei $\pi' = 0$ und $L$ der
+      Zerfällungskörper von $\pi$ über $K$. Weiter sei $b \in L$
+      Nullstelle von $\phi$. Schreibe $\pi = (X - b)\phi$ mit $\phi
+      \in L[X]$. Dann: $0 = \pi' = (X - b)\phi' + \phi$. Einsetzen von
+      $b$ ergibt: $0 = \phi(b)$. Daher ist $b$ mehrfache Nullstelle
+      von $\pi$.
+    \end{itemize}
+  \end{beweis}
 \end{satz}
 
-%%%%%%%%%%%%%%%%%%%
-% Beweis
-%%%%%%%%%%%%%%%%%%%
-\begin{beweis}
-\begin{itemize}
-	\item[$\underline{(1) \Rightarrow (2)}$:] Sei (1) erfüllt.
-	Dann ist $b$ auch Nullstelle von $\pi'$.\\
-	Folglich ist $X - b\mid\pi$ und $X - b\mid\pi'$ in $L[X]$.
-	Daher sind $\pi$, $\pi'$ nicht teilerfremd in $L[X]$.
-	Daher sind $\pi$ und $\pi'$ auch in $K[X]$ nicht teilerfremd.
-	Da $\pi$ irreduzibel ist, folgt $\pi\mid\pi'$.
-	Wegen $\deg{\pi'} < \deg{\pi}$ folgt: $\pi' = 0$.
-	
-	\item[$\underline{(2) \Rightarrow (1)}$:] Sei $\pi' = 0$, $L$ Zerfällungskörper von $\pi$ über $K$ und $b \in L$ Nullstelle von $\phi$.
-	Schreibe $\pi = (X - b)\phi$ mit $\phi \in L[X]$.
-	Dann: $0 = \pi' = (X - b)\phi' + \phi$.
-	Einsetzen von $b$ ergibt: $0 = \phi(b)$.
-	Daher ist $b$ mehrfache Nullstelle von $\pi$.
-\end{itemize}
-\end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
 % Bemerkung 12.2
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:12.2}
-Sei $\phi \in K[X]$ mit $\phi' = 0$.
-Im Fall $\chr{(K)} = 0$ ist dann $\phi$ ein konstantes Polynom.
-Im Fall $\chr{(K)} = p > 0$ hat $\phi$ die Form $\phi = \sum_{i = 0}^{\infty}a_iX^{ip}$ $(a_i \in K)$.
+  Sei $\phi \in K[X]$ mit $\phi' = 0$. Im Fall $\chr{(K)} = 0$ ist
+  dann $\phi$ ein konstantes Polynom. Im Fall $\chr{(K)} = p > 0$ hat
+  $\phi$ die Form $\phi = \sum_{i = 0}^{\infty}a_iX^{ip}$ $(a_i \in
+  K)$.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
 % Definition 12.1
 %%%%%%%%%%%%%%%%%%%
 \begin{defi}\label{defi:12.1}
-Sei $K$ Körper.
-Ein irreduzibles Polynom $\pi \in K[X]$ heißt \highl{Polynom!seperabel}{seperabel} über $K$, falls $\pi' \neq 0$ ist.
-Ein beliebiges Polynom $\phi \in K[X]$ heißt seperabel über $K$, wenn seine irreduziblen Teiler (Primfaktoren) sperabel über $K$ sind.\\
-Ein algebraisches Element $b$ in einem Erweiterungskörper $L \supseteq K$ heißt seprerabel über $K$, falls sein Minimalpolynom über $K$ seperabel über $K$ ist.\\
-Eine algebraische Körpererweiterung $L\mid K$ heißt \highl{Algebraische Körpererweiterung!seperabel}{seperabel}, falls jedes Element in $L$ seperabel über $K$ ist.
+  Sei $K$ Körper. Ein irreduzibles Polynom $\pi \in K[X]$ heißt
+  \highl{Polynom!separables}{separabel}\index{separabel} über $K$,
+  falls $\pi' \neq 0$ ist. Ein beliebiges Polynom $\phi \in K[X]$
+  heißt separabel über $K$, wenn seine irreduziblen Teiler
+  (Primfaktoren) separabel über $K$ sind. Ein algebraisches Element
+  $b$ in einem Erweiterungskörper $L \supseteq K$ heißt separabel über
+  $K$, falls sein Minimalpolynom über $K$ separabel über $K$ ist. Eine
+  algebraische Körpererweiterung $L\mid K$ heißt
+  \highl[Körpererweiterung!separable algebraische]{separabel}, falls
+  jedes Element in $L$ separabel über $K$ ist.
 \end{defi}
 
-\underline{Wichtiges Kriterium für Galoiserweiterung:} (\autoref{satz:11.8}, \autoref{satz:12.2})\\
-$L\mid K$ Körpererweiterung, $L$ Zerfällungskörper von $\phi \in K[X]$, für jeden Primfaktor $\pi$ von $\phi$ in $K[X]$ sei $\pi' \neq 0$.
-Dann $L\mid K$ Galoiserweiterung.\\
-Beachte: $\phi \in K[X]$.
-Dann $\phi' = \Leftrightarrow \left\{\begin{array}{lcl}\phi & = & a \in K \text{ konstant, } \chr(K) = 0\\ \phi & = & \sum_{i = 0}^{\infty}a_iX^{ip}, \chr(K) = p > 0\end{array}\right.$
+Ein \emph{wichtiges Kriterium für Galoiserweiterung} nach dem
+\autoref{satz:11.8} und dem \autoref{satz:12.2} ist folgendes: Sei
+$L\mid K$ eine Körpererweiterung und $L$ ein Zerfällungskörper von
+$\phi \in K[X]$. Für jeden Primfaktor $\pi$ von $\phi$ in $K[X]$ sei
+$\pi' \neq 0$. Dann ist $L\mid K$ eine Galoiserweiterung. Beachte:
+$\phi \in K[X]$. 
+Dann $\phi' = \Leftrightarrow \left\{\begin{array}{lcl}\phi & = & a
+    \in K \text{ konstant, } \chr(K) = 0\\ \phi & = & \sum_{i =
+      0}^{\infty}a_iX^{ip}, \chr(K) = p >
+    0\end{array}\right.$\todo{Hier fehlt was.}
 
 %%%%%%%%%%%%%%%%%%%
 % Beispiel 12.2
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}\label{bsp:12.2}
-\begin{enumerate}[(i)]
-	\item $\chr(K) = 0 \Rightarrow$ jedes $\phi \in K[X]$ seperabel über $K$.
-	
-	\item Ist $K$ endlich, so ist jedes $\phi \in K[X]$ seperabel über $K$;
-	zum Beweis sei $\pi \in K[X]$ irreduzibel über $K$ mit $\pi' = 0$.\\
-	Sei $p \coloneqq \chr(K)$ und $f\colon K\rightarrow  K$, $a\mapsto a^p$, der Frobenius-Automorphismus.
-	Schreibe $\pi = \sum_{i = 0}^{\infty}a_iX^{ip}$ $(a_i \in K)$.
-	Für $i = 0, 1, 2, \ldots$ existiert dann ein $b_i \in K$ mit $a_i = f(b_i) = b_i^p$.\\
-	Also: $\pi = \sum_{i = 0}^{\infty}b_i^pX^{ip} = (\sum_{i = 0}^{\infty}b_iX^i)^p$ im Widerspruch zur Irreduzibilität von $\pi$.
-	
-	\item Der gleiche Beweis zeigt, dass für einen Körper $K$ der $\chr p > 0$ jedes Polynom in $K[X]$ sperabel über $K$ ist, falls zu jedem $a \in K$ ein $b \in K$ mit $a = b^p$ existiert.
-	Ist dies erfüllt, so nennt man $K$ \highl{Körper!perfekt, vollkommen}{vollkommen (perfekt)}.
-	Endliche Körper sind also stets vollkommen.
-	(Außerdem betrachtet man Körper der Charakteristik $0$ auch als vollkommen.)
-\end{enumerate}
+  \begin{enumerate}[(i)]
+  \item Wenn gilt, $\chr(K) = 0$, dann ist jedes $\phi \in K[X]$
+    separabel über $K$.
+  \item Ist $K$ endlich, so ist jedes $\phi \in K[X]$ separabel über
+    $K$. Zum Beweis sei $\pi \in K[X]$ irreduzibel über $K$ mit $\pi'
+    = 0$. Weiterhin sei $p \coloneqq \chr(K)$ und $f\colon
+    K\rightarrow K$ mit $a\mapsto a^p$ der
+    Frobenius-Automorphismus. Schreibe $\pi = \sum_{i =
+      0}^{\infty}a_iX^{ip}$ $(a_i \in K)$. Für $i = 0, 1, 2, \ldots$
+    existiert dann ein $b_i \in K$ mit $a_i = f(b_i) = b_i^p$. Also:
+    $\pi = \sum_{i = 0}^{\infty}b_i^pX^{ip} = (\sum_{i =
+      0}^{\infty}b_iX^i)^p$ im Widerspruch zur Irreduzibilität von
+    $\pi$.
+  \item Der gleiche Beweis zeigt, dass für einen Körper $K$ der $\chr
+    p > 0$ jedes Polynom in $K[X]$ separabel über $K$ ist, falls zu
+    jedem $a \in K$ ein $b \in K$ mit $a = b^p$ existiert.  Ist dies
+    erfüllt, so nennt man $K$ \highl[Körper!vollkommen
+    perfekt]{vollkommen (perfekt)}. Endliche Körper sind also stets
+    vollkommen. Außerdem betrachtet man Körper der Charakteristik
+    $0$ auch als vollkommen.
+  \end{enumerate}
 \end{bsp}
 
 %%%%%%%%%%%%%%%%%%%
 % Satz 12.4
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:12.4}
-Jedes $\phi \in \R[X]\setminus \R$ hat in $\C$ eine Nullstelle\footnote{Abschwächung des Fundamentalsatzes der Algebra}.
+  Jedes $\phi \in \R[X]\setminus \R$ hat in $\C$ eine
+  Nullstelle\footnote{Abschwächung des Fundamentalsatzes der Algebra}.
+  \begin{beweis}
+    Sei $n \coloneqq \deg\phi$ und schreibe: $n = 2^km$ für $k, m \in
+    \N_0$ und $2\nmid m)$. Wir führen eine Induktion nach $k$ durch. Im
+    Fall $k = 0$ ist $\deg\phi$ ungerade. Nach dem Zwischenwertsatz
+    der Analysis\footnote{Sei $f\colon[a,b]\rightarrow \R$ stetig mit
+      $f(a)<0$ und $f(b)>0$ (bzw. umgekehrt). Dann existiert ein
+      $p\in[a,b]\colon f(p)=0$.} hat $\phi$ eine reelle Nullstelle.
+
+    Sei also $k > 0$. Nach dem \autoref{satz:12.2} existiert ein
+    Erweiterungskörper $L \supseteq \C$, der Zerfällungskörper von
+    $\phi$ über $\C$ ist. Dann ist $L$ Zerfällungskörper von $(X^2 +
+    1)\phi$ über $\R$. Wegen $\chr{\R} = 0$ ist $(X^2 + 1)\phi$
+    separabel über $\R$, d.\,h. die Primfaktoren von $(X^2 + 1)\phi$
+    haben in $L$ keine mehrfachen Nullstellen. Nach
+    \autoref{satz:11.8} ist $L\mid \R$ eine Galoiserweiterung. 
+
+    Für $\sigma \in G \coloneqq \Gal{L\mid\R}$ ist
+    $\widetilde{\sigma}\colon L[X] \rightarrow L[X]$ mit $\sum_{i =
+      0}^{\infty}\sigma(a_i)X^i \mapsto \sum_{i =
+      0}^{\infty}\sigma(a_i)X^i$ ein Ringautomorphismus. Schreibe
+    $\phi = a(X - b_i) - (X - b_n)$ für $a \in \R$ und $b_1, \dotsc,
+    b_n \in L$. Betrachte für jedes Element $c \in \R$ des Polynoms
+    $\psi_c \coloneqq \prod_{i < j}(X - b_i - b_j - cb_ib_j) \in
+    L[X]$.  Für $\sigma \in G$ ist $\widetilde{\sigma}(\phi) = \phi$
+    wegen $\phi \in \R[X]$. Daher permutiert $\widetilde{\phi}$ die
+    Faktoren $X-b_1, \dotsc, X-b_n$ von $\phi$, d.\,h. $\sigma$
+    permutiert $b_1, \dotsc, b_n$ und $\widetilde{\sigma}$ permutiert
+    die Faktoren $X-b_i-b_j-cb_ib_j$ von $\psi_c$. Also ist
+    $\widetilde{\sigma}(\psi_c) = \psi_c$, d.\,h. die Koeffizienten
+    von $\psi_c$ liegen in $\Fix{(G)} = \R$. Folglich haben wir
+    $\psi_c \in \R[X]$ und $\deg\psi_c = \binom{n}{2} =
+    \frac{n}{2}(n-1)$. Dabei ist $n-1$ ungerade. Nach Induktion liegt
+    eine Nullstelle $b_i + b_j + cb_ib_j$ in $\C$.
+
+    Jetz variieren wir $c$. Wegen $\abs{\R} = \infty$ existieren
+    verschiedene $c, c' \in \R$ und verschiedene $i, j \in \{1,
+    \dotsc, n\}$ mit $b_i+b_j+cb_ib_j$ sowie $b_i+b_j+c'b_ib_j \in \C$
+    (\highl{Schubfachprinzip}). \OE{} sei $i = 1$ und $j = 2$. Die
+    Subtraktion ergibt: $(c-c')b_1b_2 \in \C$, also auch $b_1b_2 \in
+    \C$ und $b_1+b_2 \in \C$.  Daher sind $b_1, b_2 \in L$ Nullstellen
+    von $(X-b_1)(X-b_2) = X^2-(b_1+b_2)X+b_1b_2\in\C[X]$. Daher genügt
+    zu zeigen, dass jedes quadratische Polynom in $\C[X]$ in
+    Linearfaktoren zerfällt. Dazu genügt zu zeigen, dass jedes $z \in
+    \C$ eine Quadratwurzel in $\C$ hat (Quadratische Ergänzung).  Sei
+    also $x\coloneqq\Re{(z)}, y\coloneqq \Im{(z)}$. \OE{} sei $y \geq
+    0$.  Setze $a \coloneqq
+    \sqrt{\frac{x}{2}+\frac{1}{2}\sqrt{x^2+y^2}}$ und $b \coloneqq
+    \sqrt{-\frac{x}{2}+\frac{1}{2}\sqrt{x^2+y^2}}$. Beide Male handelt
+    es sich um reelle Wurzeln. Dann ist $(a + bi)^2 = x+yi = z$ und
+    wir sind fertig.
+  \end{beweis}
 \end{satz}
-
-%%%%%%%%%%%%%%%%%%%
-% Beweis
-%%%%%%%%%%%%%%%%%%%
-\begin{beweis}
-Sei $n \coloneqq \deg\phi$.
-Schreibe: $n = 2^km$ $(k, m \in \N_0, 2\nmid m)$.\\
-Wir machen Induktion nach $k$.
-Im Fall $k = 0$ ist $\deg\phi$ ungerade.\\
-Nach dem Zwischenwertsatz der Analysis hat $\phi$ eine reelle Nullstelle.\\
-Sei also $k > 0$.
-Nach \autoref{satz:12.2} existiert ein Erweiterungskörper $L \supseteq \C$, der Zerfällungskörper von $\phi$ über $\C$ ist.
-Dann ist $L$ Zerfällungskörper von $(X^2 + 1)\phi$ über $\R$.
-Wegen $\chr{\R} = 0$ ist $(X^2 + 1)\phi$ seperabel über $\R$, d.\,h. die Primfaktoren von $(X^2 + 1)\phi$ haben in $L$ keine Mehrfachen Nullstellen.
-Nach \autoref{satz:11.8} ist $L\mid \R$ eine Galoiserweiterung.\\
-Für $\sigma \in G \coloneqq \Gal{L\mid\R}$ ist $\widetilde{\sigma}\colon L[X] \rightarrow  L[X]$, $\sum_{i = 0}^{\infty}\sigma(a_i)X^i \mapsto \sum_{i = 0}^{\infty}\sigma(a_i)X^i$ ein Ringautomorphismus.\\
-Schreibe $\phi = a(X - b_i) - (X - b_n)$ $(a \in \R, b_1, \dotsc, b_n \in L)$.\\
-Betrachte für jedes $c \in \R$ des Polynomes $\psi_c \coloneqq \prod_{i < j}(X - b_i - b_j - cb_ib_j) \in L[X]$.\\
-Für $\sigma \in G$ ist $\widetilde{\sigma}(\phi) = \phi$ wegen $\phi \in \R[X]$.
-Daher permutiert $\widetilde{\phi}$ die Faktoren $X-b_1, \dotsc, X-b_n$ von $\phi$, d.\,h. $\sigma$ permutiert $b_1, \dotsc, b_n$.
-Daher permutiert $\widetilde{\sigma}$ die Faktoren $X-b_i-b_j-cb_ib_j$ von $\psi_c$.
-Also: $\widetilde{\sigma}(\psi_c) = \psi_c$, d.\,h. die Koeffizienten von $\psi_c$ liegen in $\Fix{(G)} = \R$.
-Floglich: $\psi_c \in \R[X]$, $\deg\psi_c = \begin{pmatrix}n\\2\end{pmatrix} = \frac{n}{2}(n-1)$;
-dabei ist $n-1$ ungerade.\\
-Nach Induktion liegt eine Nullstelle $b_i + b_j + cb_ib_j$ in $\C$.
-
-Jetz variieren wir $c$:\\
-Wegen $\abs{\R} = \infty$ existieren verschiedene $c, c' \in \R$ und verschiedene $i, j \in \{1, \dotsc, n\}$ mit $b_i+b_j+cb_ib_j, b_i+b_j+c'b_ib_j \in \C$ (Schubfachprinzip), \OE{} $i = 1, j = 2$.
-Subtraktion ergibt: $(c-c')b_1b_2 \in \C$, also auch $b_1b_2 \in \C$ und $b_1+b_2 \in \C$.
-Daher sind $b_1, b_2 \in L$ Nullstellen von $(X-b_1)(X-b_2) = X^2-(b_1+b_2)X+b_1b_2\in\C[X]$.\\
-Daher genügt zu zeigen, dass jedes quadratische Polynom in $\C[X]$ in Linearfaktoren zerfällt.
-Dazu genügt zu zeigen, dass jedes $z \in \C$ eine Quadratwurzel in $\C$ hat (Quadratische Ergänzung).\\
-Sei also $x\coloneqq\Re{(z)}, y\coloneqq \Im{(z)}$, \OE{} $y \geq 0$.
-Setze $a \coloneqq \sqrt{\underbrace{\frac{x}{2}+\frac{1}{2}\sqrt{x^2+y^2}}_{\geq 0 \Rightarrow \text{ reelle Wurzel}}}$, $b \coloneqq \sqrt{\underbrace{-\frac{x}{2}+\frac{1}{2}\sqrt{x^2+y^2}}_{\geq 0 \Rightarrow \text{ reelle Wurzel}}}$.\\
-Dann: $(a + bi)^2 = x+yi = z$ und wir sind fertig.
-\end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
 % Satz 12.5
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}[Fundamentalsatz der Algebra]\label{satz:12.5}
-$\C$ ist algebraisch abgeschlossen.
+  $\C$ ist algebraisch abgeschlossen.
+  \begin{beweis}
+    Sei $\phi \in \C[X]\setminus \C$, also $\phi\overline{\phi} \in
+    \R[X]\setminus \R$. Nach dem \autoref{satz:12.4} hat
+    $\phi\overline{\phi}$ eine Nullstelle $z \in \C$.  Also: $\phi(z)
+    = 0$ oder $\overline{\phi}(z) = 0$ (d.\,h. $\phi(\overline{z}) =
+    0$).
+  \end{beweis}
 \end{satz}
 
-%%%%%%%%%%%%%%%%%%%
-% Beweis
-%%%%%%%%%%%%%%%%%%%
-\begin{beweis}
-Sei $\phi \in \C[X]\setminus \C$, also $\phi\overline{\phi} \in \R[X]\setminus \R$.\\
-Nach \autoref{satz:12.4} hat $\phi\overline{\phi}$ eine Nullstelle $z \in \C$.
-Also: $\phi(z) = 0$ oder $\overline{\phi}(z) = 0$ (d.\,h. $\phi(\overline{z}) = 0$).
-\end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
 % Bemerkung 12.3
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:12.3}
-\begin{enumerate}[(i)]
-	\item Folglich ist jedes irreduzible Polynom in $\C[X]$ linear, d.\,h. von der Form $X-b$ mit $b \in \C$.
-	
-	\item Für jedes irreduzible Polynom $\phi \in \R[X]$ ist $\deg\phi \leq 2$;
-	denn $\phi$ hat eine Nullstelle $b \in \C$. Folglich: $\deg\phi = [\R(b):\R] \leq [\C \colon \R] = 2$.
-\end{enumerate}
+  \begin{enumerate}[(i)]
+  \item Folglich ist jedes irreduzible Polynom in $\C[X]$ linear,
+    d.\,h. von der Form $X-b$ mit $b \in \C$.
+  \item Für jedes irreduzible Polynom $\phi \in \R[X]$ ist $\deg\phi
+    \leq 2$. Denn $\phi$ hat eine Nullstelle $b \in \C$. Folglich:
+    $\deg\phi = [\R(b)\colon\R] \leq [\C \colon \R] = 2$.
+  \end{enumerate}
 \end{bem}
 
 %\include{Kapitel13}
@@ -4596,7 +4639,7 @@ Also: $\phi(z) = 0$ oder $\overline{\phi}(z) = 0$ (d.\,h. $\phi(\overline{z}) = 
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:13.1}
 Offenbar ist $\Z[X] \coloneqq \Set{\sum_{i=0}^{\infty} a_iX^i\Q[X] |
-  a_0, a_1, a_2, \ldots \in \Z}$ ein Ring bezüglich der üblichen
+  a_0, a_1, a_2, \dotsc \in \Z}$ ein Ring bezüglich der üblichen
 Addition und Multiplikation von Polynomen.
 Ein Polynom $\alpha = \sum_{i=0}^{\infty}a_iX^i \in \Z[X]$ mit $\ggt{(a_0, \dotsc, a_n)} = 1$ heißt \highl{Polynom!primitiv}{primitiv}.\\
 Insbesondere ist jedes normierte Polynom $\alpha \in \Z[X]\setminus\{0\}$ primitiv.
