--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -4641,7 +4641,7 @@ Dann $\phi' = \Leftrightarrow \left\{\begin{array}{lcl}\phi & = & a
 Offenbar ist $\Z[X] \coloneqq \Set{\sum_{i=0}^{\infty} a_iX^i\Q[X] |
   a_0, a_1, a_2, \dotsc \in \Z}$ ein Ring bezüglich der üblichen
 Addition und Multiplikation von Polynomen.
-Ein Polynom $\alpha = \sum_{i=0}^{\infty}a_iX^i \in \Z[X]$ mit $\ggt{(a_0, \dotsc, a_n)} = 1$ heißt \highl{Polynom!primitiv}{primitiv}.\\
+Ein Polynom $\alpha = \sum_{i=0}^{\infty}a_iX^i \in \Z[X]$ mit $\ggt{(a_0, \dotsc, a_n)} = 1$ heißt \highl[Polynom!primitives]{primitiv}\index{primitiv}.
 Insbesondere ist jedes normierte Polynom $\alpha \in \Z[X]\setminus\{0\}$ primitiv.
 \end{bem}
 
@@ -4759,9 +4759,9 @@ Folglich hat $\alpha$ die Primfaktorzerlegung $\alpha = (X-3)\beta$
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:13.3}
 Sei $n \in \N$.
-Ein $\zeta \in \C$ mit $\zeta^n = 1$ heißt \highl{Einheitswurzel}{$n$-te Einheitswurzel}.\\
+Ein $\zeta \in \C$ mit $\zeta^n = 1$ heißt \highl[Einheitswurzel]{$n$-te Einheitswurzel}.\\
 Gegebenenfalls ist die Ordnung $d$ von $\zeta$, d.\,h. die kleinste natürliche Zahl mit $\zeta^d = 1$, ein Teiler von $n$.
-Hat $\zeta$ die Ordnung $n$, so heißt $\zeta$ \highl{Einheitswurzel!primitive}{primitive n-te Einheitswurzel}.\\
+Hat $\zeta$ die Ordnung $n$, so heißt $\zeta$ \highl[Einheitswurzel!primitive]{primitive $n$-te Einheitswurzel}.\\
 In $\C$ hat das Polynom $X^n-1$ höchstens $n$ verschiedene Nullstellen.
 Andererseits ist $(X^n-1)' = nx^{n-1}$ zu $X^n-1$ teilerfremd.
 Daher hat $X^n-1$ keine mehrfachen Nullstellen in $\C$.
