--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -4974,15 +4974,23 @@ Dann sind die Elemente in $G$ linear unabhängig im $L$-Vektorraum $Abb(L,L)$
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Sonst existieren paarweise verschiedene $\sigma_1,\dotsc ,\sigma_n\in G$ und $a_1,\dotsc ,a_n \in L\setminus\{0\}$ mit $0 = a_1\sigma_1 + \dotsb + a_n\sigma_n$.
+Sonst existieren paarweise verschiedene $\sigma_1,\ldots ,\sigma_n\in G$ und $a_1,\ldots ,a_n \in L\setminus\{0\}$ mit $0 = a_1\sigma_1 + \dotsb + a_n\sigma_n$.
 Wir treffen unsere Wahl so, dass $n$ möglichst klein ist.
 Dann ist sicher $n \geq 2$, d.\,h.
-\begin{gather*}(\ast) \qquad 0 = a_1\sigma_1(x) + \dotsb + a_n\sigma_n(x) \qquad (x\in L).\end{gather*}
-Wir wählen $y\in L$ mit $\sigma_1(y) \neq \sigma_n(y)$, multiplizieren $(\ast)$ mit $\sigma_n(y)$ und erhalten:
-\begin{gather*}(\ast\ast) \qquad 0 = a_1\sigma_n(y)\sigma_1(x) + \dotsb + a_n\sigma_n(y)\sigma_n(x) \qquad (x\in L).\end{gather*}
-Ersetzt man in $(\ast)$ $x$ durch $xy$, so ergibt sich:
-\begin{gather*}(\ast\ast\ast) \qquad 0 = a_1\sigma_1(x)\sigma_1(y) + \dotsb + a_n\sigma_n(x)\sigma_n(y) \qquad (x\in L).\end{gather*}
-Subtraktion von $(\ast\ast)$ und $(\ast\ast\ast)$ liefert:
+\begin{gather}\label{eq:13-1}
+ 0 = a_1\sigma_1(x) + \dotsb + a_n\sigma_n(x) \qquad (x\in L).
+\end{gather}
+Wir wählen $y\in L$ mit $\sigma_1(y) \neq \sigma_n(y)$, multiplizieren \autoref{eq:13-1} mit $\sigma_n(y)$ und erhalten:
+\begin{gather}\label{eq:13-2}
+  0 = a_1\sigma_n(y)\sigma_1(x) + \dotsb + a_n\sigma_n(y)\sigma_n(x)
+  \qquad (x\in L)
+\end{gather}
+Ersetzt man in \autoref{eq:13-1} $x$ durch $xy$, so ergibt sich:
+\begin{gather}\label{eq:13-3}
+ 0 = a_1\sigma_1(x)\sigma_1(y) + \dotsb + a_n\sigma_n(x)\sigma_n(y)
+ \qquad (x\in L)
+\end{gather}
+Subtraktion von \autoref{eq:13-2} und \autoref{eq:13-3} liefert:
 \begin{gather*}0 = a_1(\sigma_1(y)-\sigma_n(y))\sigma_1(x) + \dotsb + a_{n-1}(\sigma_{n-1}(y)-\sigma_n(y))\sigma_{n-1}(x) \qquad (x\in L),\end{gather*}
 d.\,h. $0 = a_1(\sigma_1(y)-\sigma_n(y))\sigma_1 + \dotsb + a_{n-1}(\sigma_{n-1}(y)-\sigma_n(y))\sigma_{n-1}$.\\
 Aus der Wahl von $n$ folgt: $a_i(\sigma_i(y)-\sigma_n(y)) = 0$ für $i=1,\dotsc ,n-1$.\\
@@ -5223,11 +5231,14 @@ Für $i=1,\dotsc,n$ ist $G_i\unlhd G_{i-1}$ und $G_{i-1}/G_i$ zyklisch (von Primz
 	mit $\underbrace{\abs{G_{i-1,j-1}/G_i\colon
             G_{i-1,j}/G_i}}_{=\abs{G_{i-1,j-1}\colon G_{i-1,j}}} \in \PZ$ für alle $j$.
 	Daher ist
-	\begin{gather*}(\ast) \qquad G_{i-1} = G_{i-1,0} \geq G_{i-1,1} \geq \dotsc \geq G_{i-1,k_{i-1}} = G_i\end{gather*}
+	\begin{gather}\label{eq:14-1}
+          G_{i-1} = G_{i-1,0} \geq G_{i-1,1} \geq \dotsc \geq G_{i-1,k_{i-1}} =
+          G_i
+        \end{gather}
 	eine Folge von Untergruppen von $G_{i-1}$.\\
 	Da $G_{i-1}/G_i$ abelsch ist, folgt $G_{i-1}/G_i\unlhd G_{i-1,j-1}/G_i$ und $G_{i-1,j} \unlhd G_{i-1,j-1}$ für alle $j$.
 	Wir wissen auch, dass Gruppen von Primzahlordnung zyklisch sind.
-	Setzt man also die Folgen $(\ast)$ zusammen, so folgt die Behauptung.\footnote{Verfeinerung der ursprünglichen Folge.}
+	Setzt man also die Folgen von \autoref{eq:14-1} zusammen, so folgt die Behauptung.\footnote{Verfeinerung der ursprünglichen Folge.}
 \end{itemize}
 \end{beweis}
 
