Von makeidx auf index umstellen
Laut Vorlage (SVN Commit r1646) soll auf index umgestellt werden. Weitere
Informationen stehen in dem Commit.

git-svn-id: https://svn.lug-jena.de/uni-skripte@2489 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/leopold-hoehere-ana/skript.ltx
+++ b/leopold-hoehere-ana/skript.ltx
@@ -8,7 +8,7 @@
 \documentclass[parskip*,german,bibtotoc,idxtotoc]{scrreprt}
 
 \usepackage{ifthen}
-\usepackage{makeidx}
+\usepackage{index}
 % \usepackage[final]{graphicx}  % Für Grafiken
 
 % Farbanpassung für verweise etc
