--- a/leopold-hoehere-ana/skript.ltx
+++ b/leopold-hoehere-ana/skript.ltx
@@ -1,3 +1,11 @@
+% Einige zusätzliche Informationen für rubber
+%  rubber erkennt nicht, dass die Datei weg kann, daher sagen wir es ihm
+% rubber: clean $base.thm
+%  rubber soll nach Änderungen an der Datei nochmal bauen
+% rubber: watch $base.thm
+% rubber: index.tool      xindy
+% rubber: index.language  german-din
+
 % scrreprt trifft am Besten die Bedürfnisse eines Skripts, das ganze wird
 % zweiseitig (twoside), d.h. es wird zwischen linker und rechter Seite
 % unterschieden, und wir verwenden zwischen den Absätzen einen Abstand
