Umstellung auf Xindy 2.3
Mit der neuen Version wird der Befehl \lettergroup für die Überschriften
im Index verwendet. Daher können wir diesen (statt vorher \indexsection)
einfach als Alias von \minisec definieren.

git-svn-id: https://svn.lug-jena.de/uni-skripte@2491 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/leopold-hoehere-ana/skript.ltx
+++ b/leopold-hoehere-ana/skript.ltx
@@ -161,9 +161,8 @@
 \renewcommand{\seename}{$\rightarrow$}
 
 
-% Definition für Xindy für die Trennung der einzelnen Abschnitte im
-% Index. siehe auch die Datei indexstyle.xdy
-\newcommand*{\indexsection}{\minisec}
+% Befehl für die Darstellung der Gliederungsüberschriften im Index
+\newcommand*{\lettergroup}[1]{\minisec{#1}}
 
 \newcommand*{\gdw}{\ifthenelse{\boolean{mmode}}%
 			       {\mspace{8mu}\Leftrightarrow\mspace{8mu}}%
