TODO wegen Golay, Infos zu dem Mensch einbauen.
git-svn-id: https://svn.lug-jena.de/uni-skripte@2498 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -2721,7 +2721,8 @@ Dabei gelten folgende Begriffe:
 % Beispiel 8.1
 \begin{bsp}
   \begin{enumerate}[(a)]
-  \item (\highl[Golay-Code!ternärer]{Ternärer Golay"=Code})\\
+  \item (\highl[Golay-Code!ternärer]{Ternärer
+      Golay"=Code})\todo{Verweis auf Golay einbauen}\\
     Sei $q = 3, n = 11$ und $\phi = X^5 + X^4 - X^3 + X^2 - 1 \in
     \F_3[X]$. Dann ist $C \coloneqq (\phi) / (X^{11} - 1)$. Man kann
     zeigen, dass $\phi$ ein irreduzibler Teiler von $X^{11} - 1$ ist
