TODO aufgelöst, Lindemann hat Quadratur des Kreises gelöst
git-svn-id: https://svn.lug-jena.de/uni-skripte@2502 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -2783,7 +2783,8 @@ Dabei gelten folgende Begriffe:
   \begin{description}
   \item[Quadratur des Kreises] Zu einem vorgegebenen Kreis konstruiere
     man ein Quadrat mit dem gleichen
-    Flächeninhalt. Die Antwort wurde erst 1882\todo{Datum prüfen}
+    Flächeninhalt. Die Antwort wurde erst 1882 vom deutschen
+    Mathematiker \textsc{Ferdinand von Lindemann}
     gefunden.
   \item[Rektifikation des Kreises] Zu einem vorgegebenen Kreis
     konstruiere man eine Strecke, deren Länge genau der Umfang des
