--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -2872,7 +2872,7 @@ Dabei gelten folgende Begriffe:
       \draw (3.1,3.1) node {$w+z$};
     \end{tikzpicture}
   \item $z \in H_{\infty} \Rightarrow \Re(z), \Im(z) \in M_{\infty}$:
-    Man fällt das Lot auf die $x$"=Achse und das Lot auf die $y$"=Achse\\
+    Man fällt das Lot auf die $x$"=Achse und das Lot auf die $y$"=Achse:
     \begin{tikzpicture}
       \draw[->] (0,0) -- (4,0);
       \draw[->] (0,0) -- (0,4);
@@ -2888,7 +2888,7 @@ Dabei gelten folgende Begriffe:
       \draw (3,-.3) node {$\Im(z)$};
     \end{tikzpicture}
   \item $x, y \in M_{\infty} \cap \R \Rightarrow x + \operatorname{i}y
-    \in M_{\infty}$:\\
+    \in M_{\infty}$:
     \begin{tikzpicture}
       \draw[->] (0,0) -- (4,0);
       \draw[->] (0,0) -- (0,4);
@@ -2912,20 +2912,20 @@ Dabei gelten folgende Begriffe:
       \draw (4,3) node {Strahlensatz: $\frac{z}{1} = \frac{x}{w}$, d.\,h. $x = z \cdot w$};
     \end{tikzpicture}	
   \item $0\neq z \in M_{\infty} \Rightarrow \frac{1}{z} =
-    \frac{\overline{z}}{z \cdot \overline{z}} \in M_{\infty}$:\\
-    \OE{}: $z \in \R, z > 0$\\
+    \frac{\overline{z}}{z \cdot \overline{z}} \in M_{\infty}$: Sei
+    \OE{} $z \in \R$ und $z > 0$\\
     \begin{tikzpicture}
       \draw[->] (0,0) -- (4,0);
-      \draw[->] (0,0) -- (0,4);
+      \draw[->] (0,0) -- (0,3);
       \filldraw (0,1.1) circle (1pt) (3.5,0)  circle (1pt) (0,2) circle (1pt)  (2,0) circle (1pt);
       \draw[shorten >=-0.5cm,      shorten <=-0.5cm] (0,1.1) -- (2,0);
       \draw[shorten >=-0.5cm,      shorten <=-0.5cm, dashed] (0,2) --  (3.5,0);
       \draw (2,-.2) node {$1$} (3.5,-.2) node {$z$};
       \draw (-.4,2) node {$\operatorname{i}$} (-.4,1.1) node {$x\operatorname{i}$};
-      \draw (4,3) node {Strahlensatz: $\frac{1}{z} = \frac{x}{1}$};
+      \draw (2.7,2.5) node {Strahlensatz: $\frac{1}{z} = \frac{x}{1}$};
     \end{tikzpicture}
-  \item $z \in M_{\infty} \Rightarrow w \coloneqq \sqrt{z} \in M_{\infty}$:\\
-    Schreibe: $z = \abs{z}(\cos\phi + \operatorname{i} \cdot \sin\phi)$.
+  \item $z \in M_{\infty} \Rightarrow w \coloneqq \sqrt{z} \in M_{\infty}$:
+    Schreibe $z = \abs{z}(\cos\phi + \operatorname{i} \cdot \sin\phi)$.
     Dann: $\sqrt{z} = \sqrt{\abs{z}}(\cos\frac{\phi}{2} +
     \operatorname{i} \cdot \sin\frac{\phi}{2})$. Winkelhalbierung mit
     Zirkel und Lineal bekanntlich möglich. \OE{}: $z \in \R, z > 0$:
@@ -3046,7 +3046,8 @@ Dabei gelten folgende Begriffe:
       \ldots, y_n$ die Behauptung schon gilt. Für $j = 1, \ldots, n$
       existiert also eine Folge $\Q(M \cup \overline{M}) = L_{j_0}
       \subseteq L_{j_1} \subseteq \ldots \subseteq L_{j_n}$ von
-      Teilkörpern von $\C$ mit $y_j \in L_{j_{e_j}}$ und
+      Teilkörpern von $\C$ mit $y_j \in L_{j_{e_j}}$\todo{Ist der
+        Index korrekt?} und
       $[L_{j_k}:L_{j_{k-1}}] = 2$ für $k = 1, \dotsc, e_j$. Jedes
       $L_{j_k}$ entsteht aus $L_{j, k-1}$ durch Adjunktion einer
       Quadratwurzel. Adjungiert man zu $\Q(M \cup \overline{M})$
