--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -3081,6 +3081,15 @@ Dabei gelten folgende Begriffe:
     Minimalpolynom $X^3 -2$ von $\sqrt[3]{2}$ über $\Q$ hat den
     Grad~$3$. Deshalb ist die Konstruktion nach \autoref{satz:9.3}
     unmöglich.
+    \begin{tikzpicture}
+      \draw (0,0) -- (0,1) -- (1,1) -- (1,0) -- (0,0);
+      \draw (0,1) -- (.5,1.5) -- (1.5,1.5) -- (1.5,.5) -- (1,0);
+      \draw (1,1) -- (1.5,1.5);
+      \draw (2,0) -- (2,1.26) -- (3.26,1.26) -- (3.26,0) -- (2,0);
+      \draw (2,1.26) -- (2.63,1.89) -- (3.89,1.89) -- (3.89,.63) -- (3.26,0);
+      \draw (3.26,1.26) -- (3.89,1.89);
+      \draw[->,thick] (1.25,.75)  -- (2,.75);
+    \end{tikzpicture}
   \item Quadratur des Kreises: Zu einem gegebenen Kreis mit Radius~$1$
     konstruiere man ein Quadrat mit dem gleichen Flächeninhalt. Für
     die Seitenlänge $x$ des gesuchten Quadrates gilt also $x^2 =
