--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -6977,7 +6977,7 @@ Dabei: $I^2 = J^2 = K^2 = -1$, $IJ = K = -JI$, $JK = I = -KJ$, $KI = J = -IK$.
 \section{Übungsblatt 3}
 
 % Aufgabe 9
-\begin{exerc}
+\begin{exerc}\label{exer:9}
   Für ein Element $a$ einer Gruppe $G$ nennt man
   \begin{gather*}
     \ord(a)\coloneqq\min\Set{n\in\N | a^{n}=1}
@@ -7000,7 +7000,7 @@ Dabei: $I^2 = J^2 = K^2 = -1$, $IJ = K = -JI$, $JK = I = -KJ$, $KI = J = -IK$.
 \end{exerc}
 
 %Aufgabe 10
-\begin{exerc}
+\begin{exerc}\label{exer:10}
   Beweisen Sie:
   \begin{enumerate}[(i)]
   \item $2\neq\PZ\Rightarrow
@@ -7118,10 +7118,58 @@ Dabei: $I^2 = J^2 = K^2 = -1$, $IJ = K = -JI$, $JK = I = -KJ$, $KI = J = -IK$.
   \end{enumerate}
 \end{exerc}
 
+% Aufgabe 20
 \begin{exerc}
   Zeigen Sie, dass sich in einem endlichen Körper $K$ jedes Element
   $c$ in der Form $c=a^{2}+b^{2}$ schreiben lässt. \emph{Hinweis}: Man
   kann das Schubfachprinzip verwenden.
+\end{exerc}
+
+\section{Übungsblatt 6}
+
+% Aufgabe 21
+\begin{exerc}
+  Zeigen Sie, dass für $2\neq p\in\PZ, n\in\N$ und $G\coloneqq U(\Z/
+  p^{n}\Z)$ gilt:
+  \begin{enumerate}[(i)]
+  \item $G$ enthält das Element $a$ der Ordnung $p^{n-1}$. (Hinweis: \autoref{exer:10})
+  \item $G$ enthält ein Element $b$ der Ordnung $p-1$. (Hinweis:
+    \ref{satz:6.8}\todo{Eventuell stimmt die Referenz nicht. Prüfen.})
+  \item $G$ enthält ein Element $c$ der Ordnung $p^{n-1}\cdot
+    (p-1)$. (Hinweis: \autoref{exer:9})
+  \item Finden Sie ein Element der Ordnung $20$ in $U(\Z/25\Z)$ und
+    ein Element der Ordnung $18$ in $U(\Z/27\Z)$.
+  \end{enumerate}
+\end{exerc}
+
+% Aufgabe 22
+\begin{exerc}
+  Zeigen Sie, dass für $n\in\N\setminus\{1\}$ gilt (Hinweis:
+  \autoref{exer:10}):
+  \begin{gather*}
+    U(\Z/2^{n}\Z) = \Set{\pm 5^{k}+2^{n}\Z | k=0,1,\dotsc, 2^{n-2}-1}
+  \end{gather*}
+  Folgern Sie, dass $U(\Z/2^{n}\Z)$ für $3\leq n\in\N$ kein Element
+  der Ordnung $2^{n-1}$ enthält.
+\end{exerc}
+
+% Aufgabe 23
+\begin{exerc}
+  \begin{enumerate}[(i)]
+  \item Bestimmen Sie das Minimalpolynom von $\sqrt{5}-\sqrt{3}$ über
+    $\Q$.
+  \item Zerlegen Sie $X^{16}-X$ in $\F_{2}[X]$ in Primfaktoren.
+  \item Geben Sie die Anzahl der irreduziblen Polynome vom Grad $9$ in
+    $\F_{3}[X]$ an.
+  \end{enumerate}
+\end{exerc}
+
+% Aufgabe 24
+\begin{exerc}
+  Beweisen Sie, dass für $p\in\PZ$ und $n\in\N$ gilt: $n\mid
+  \phi(p^{n}-1)$. Dabei ist $\phi$ die Eulersche
+  $\phi$"=Funktion. Hinweis: Man kann die multiplikative Gruppe und
+  Körperautomorphismen von $\F_{p^{n}}$ betrachten.
 \end{exerc}
 
 \begin{thebibliography}{99}
