--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -7134,7 +7134,7 @@ Dabei: $I^2 = J^2 = K^2 = -1$, $IJ = K = -JI$, $JK = I = -KJ$, $KI = J = -IK$.
   \begin{enumerate}[(i)]
   \item $G$ enthält das Element $a$ der Ordnung $p^{n-1}$. (Hinweis: \autoref{exer:10})
   \item $G$ enthält ein Element $b$ der Ordnung $p-1$. (Hinweis:
-    \ref{satz:6.8}\todo{Eventuell stimmt die Referenz nicht. Prüfen.})
+    \autoref{satz:6.8}\todo{Eventuell stimmt die Referenz nicht. Prüfen.})
   \item $G$ enthält ein Element $c$ der Ordnung $p^{n-1}\cdot
     (p-1)$. (Hinweis: \autoref{exer:9})
   \item Finden Sie ein Element der Ordnung $20$ in $U(\Z/25\Z)$ und
