In dem Satz muss das Wort „bezeichnet“ stehen.
git-svn-id: https://svn.lug-jena.de/uni-skripte@2512 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -2149,7 +2149,7 @@ aber $3$.
    \deg{\mu}$ und $\nu(b) = 0$, so ist $\mu - \nu \in K[X]$ mit
    $\deg(\mu - \nu) < \deg{\mu}$ und $(\mu - \nu)(b) = 0$. Also ist
    $\mu - \nu = 0$ nach der Wahl von $\mu$ und somit gilt, $\mu =
-   \nu$. Man nennt das Polynom $\mu$ als \highl{Minimalpolynom}
+   \nu$. Man bezeichnet das Polynom $\mu$ als \highl{Minimalpolynom}
    von $b$ über $K$.
 \end{bem}
 
