TODO aufgelöst, Übungen verlinkt
git-svn-id: https://svn.lug-jena.de/uni-skripte@2513 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -1987,10 +1987,9 @@ In dem Kapitel sei $K$ immer ein Körper.
     \in \N | a^n = 1}}$ die \highl{Ordnung} von
   $a$. Existiert das Minimum nicht, so sagt man, dass $a$ unendliche
   Ordnung hat, und schreibt: $\ord(a) = \infty$. Ist $G$ endlich, so
-  hat jedes Element in $G$ endliche Ordnung (ÜA 10). \todo{Übung
-  ergänzen}
+  hat jedes Element in $G$ endliche Ordnung (\autoref{exer:9}). 
 
-  Im Folgenden sei $\ord(a) = n < \infty$. Nach der ÜA~10 enthält dann
+  Im Folgenden sei $\ord(a) = n < \infty$. Nach dem Punkt~(ii) der \autoref{exer:9} enthält dann
   \begin{gather*}\Set{a^m | m \in \Z} = \{1, a, a^2, \dotsc, a^{n-1}\}\end{gather*}
   genau $n$ verschiedene Elemente.  Genauer gilt, $a^k = a^l
   \Leftrightarrow k \equiv l \pmod{n}$. Insbesondere gilt  für $m \in
@@ -2004,7 +2003,7 @@ In dem Kapitel sei $K$ immer ein Körper.
   $\abs{ G} = n < \infty$. Dann existiert ein $a \in G$ mit $a^n = 1$
   und $G = \Set{a^m | m \in \Z} = \{1, a, \dotsc, a^{n-1}\}$
 \begin{beweis}
-ÜA 12\todo{Übung ergänzen}
+  Siehe \autoref{exer:11}.
 \end{beweis}
 \end{satz}
 
@@ -3987,7 +3986,7 @@ Dabei gelten folgende Begriffe:
 % Beispiel 11.1
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}\label{bsp:11.1}
-  Nach Aufgabe 26\todo{Link einbauen} ist $\Aut(\R) = \{\id_{\R}\}$.
+  Nach \ref{exer:18} ist $\Aut(\R) = \{\id_{\R}\}$.
   Man kann zeigen, dass $\Aut(\C)$ überabzählbar ist. Nach
   \autoref{satz:7.8} ist $\Aut(\F_{p^n}) = \langle f\rangle$ zyklisch
   der Ordnung $n$ für $p \in \PZ$, $n \in \N$. Dabei ist $f\colon
@@ -7014,7 +7013,7 @@ Dabei: $I^2 = J^2 = K^2 = -1$, $IJ = K = -JI$, $JK = I = -KJ$, $KI = J = -IK$.
 \end{exerc}
 
 %Aufgabe 11
-\begin{exerc}
+\begin{exerc}\label{exer:11}
   Zeigen Sie, dass für jeden Körper $K$ und jede endliche Untergruppe
   $G$ von $(K\setminus\{0\}, \cdot)$ gilt:
   \begin{enumerate}[(i)]
@@ -7094,7 +7093,7 @@ Dabei: $I^2 = J^2 = K^2 = -1$, $IJ = K = -JI$, $JK = I = -KJ$, $KI = J = -IK$.
 \end{exerc}
 
 %Aufgabe 18
-\begin{exerc}
+\begin{exerc}\label{exer:18}
   Sei $\alpha$ ein Körperautomorphismus von $\R$. Zeigen Sie:
   \begin{enumerate}[(i)]
   \item $\alpha(x)= x$ für alle $x\in\Q$.
