--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -6472,309 +6472,329 @@ $g = \begin{pmatrix}1 & 2 & 3\\ 3 & 2 & 1\end{pmatrix} \Rightarrow gs_1 = \begin
 % Bemerkung 16.1
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:16.1}
-Jede Gruppe $G$ operiert auf der Menge der Untergruppen von $G$ durch:
-\begin{gather*}{}^g\!H\coloneqq gHg^{-1}\ (g\in G, H\leq G).\end{gather*}
-[$gHg^{-1}$ ist als Bild von $H$ unter einem inneren Automorphismus von $G$ tatsächlich wieder eine Untergruppe von $G$.]\\
-Die Bahn einer Untergruppe $H\leq G$ ist die Konjugationsklasse
-\begin{gather*}\mathfrak{k}_H\coloneqq\Set{gHg^{-1} | g\in G}\end{gather*}
-Gehören zwei Untergruppen $H_1,H_2 leq G$ zur gleichen Konjugationsklasse [d.\,h. existiert ein $g\in G$ mit $H_2=gH_1g^{-1}$], so heißen $H_1,H_2$ konjugiert in $G$.\\
-Der Stabilisator von $H\leq G$ unter der Konjugationsoperation ist
-\begin{gather*}\Set{g\in G | gHg^{-1}} = \Set{g\in G | gH=Hg}=\colon N_G(H)\end{gather*}
-(Übungsaufgabe 31). $N_G(H)$ heißt \highl[Gruppe!Normalisator]{Normalisator}\index{Normalisator} von $H$ in $G$.
-Nach \autoref{satz:15.5} ist $N_G(H)\leq G$, und $\abs{\mathfrak{k}_H}=\abs{G\colon N_G(H)}$.
-Nach Übungsaufgabe 31 ist $H\unlhd N_G(H)$.
+  Jede Gruppe $G$ operiert auf der Menge der Untergruppen von $G$ durch:
+  \begin{gather*}
+    {}^g\!H\coloneqq gHg^{-1}\ (g\in G, H\leq G)
+  \end{gather*}
+  Als Bild von $H$ ist $gHg^{-1}$ unter einem inneren Automorphismus
+  von $G$ tatsächlich wieder eine Untergruppe von $G$. Die Bahn einer
+  Untergruppe $H\leq G$ ist die Konjugationsklasse
+  \begin{gather*}
+    \mathfrak{k}_H\coloneqq\Set{gHg^{-1} | g\in G}
+  \end{gather*}
+  Gehören zwei Untergruppen $H_1,H_2 leq G$ zur gleichen
+  Konjugationsklasse, d.\,h. existiert ein $g\in G$ mit
+  $H_2=gH_1g^{-1}$, so heißen $H_1,H_2$ konjugiert in $G$. Der
+  Stabilisator von $H\leq G$ unter der Konjugationsoperation ist
+  \begin{gather*}
+    \Set{g\in G | gHg^{-1}} = \Set{g\in G | gH=Hg}=\colon N_G(H)
+  \end{gather*}
+  Siehe auch Übungsaufgabe 31\todo{Link einbauen}. Man bezeichnet
+  $N_G(H)$ als den
+  \highl[Gruppe!Normalisator]{Normalisator}\index{Normalisator} von
+  $H$ in $G$. Nach dem \autoref{satz:15.5} ist $N_G(H)\leq G$, und
+  $\abs{\mathfrak{k}_H}=\abs{G\colon N_G(H)}$.  Nach Übungsaufgabe
+  31\todo{Link einbauen}
+  ist $H\unlhd N_G(H)$.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
 % Definition 16.1
 %%%%%%%%%%%%%%%%%%%
 \begin{defi}[$p$-Untergruppe]
-Sei $p\in\PZ$, und sei $G$ eine endliche Gruppe der Ordnung $p^am$ $(a\in\N_0,m\in\N,p\nmid m)$.\\
-Eine \highl[Gruppe!$p$-Untergruppe]{$p$-Untergruppe}\index{$p$-Untergruppe} von $G$ ist eine Untergruppe von $G$, die gleichzeitig ein $p$-Gruppe ist.
-Eine $p$-Untergruppe $P$ von $G$ heißt
-  \highl[Gruppe!$p$-Sylowgruppe]{$p$-Sylowgruppe}\index{$p$-Sylowgruppe} von $G$, falls $p\nmid
-  \abs{G\colon P}$ gilt [d.\,h. $\abs{P}=p^a$].
-Die Menge aller $p$-Sylowgruppen von $G$ bezeichnet man mit $\Syl_p(G)$.
+  Sei $p\in\PZ$ und $G$ eine endliche Gruppe der Ordnung $p^am$
+  $(a\in\N_0,m\in\N,p\nmid m)$. Eine
+  \highl[Gruppe!$p$-Untergruppe]{$p$-Untergruppe}\index{$p$-Untergruppe}
+  von $G$ ist eine Untergruppe von $G$, die gleichzeitig ein
+  $p$-Gruppe ist.  Eine $p$-Untergruppe $P$ von $G$ heißt
+  \highl[Gruppe!$p$-Sylowgruppe]{$p$-Sylowgruppe}\index{$p$-Sylowgruppe}%
+  \index{Sylowgruppe}
+  von $G$, falls $p\nmid \abs{G\colon P}$ gilt, d.\,h. $\abs{P}=p^a$.
+  Die Menge aller $p$-Sylowgruppen von $G$ bezeichnet man mit
+  $\Syl_p(G)$.
 \end{defi}
 
 %%%%%%%%%%%%%%%%%%%
 % Satz 16.1
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}[\textsc{Sylow} 1832--1918]\label{satz:16.1}
-Seien $G$ eine endliche Gruppe und $p\in\PZ$.
-\begin{enumerate}[(i)]
-	\item $G$ enthält mindestens eine $p$-Sylowgruppe.
+  Seien $G$ eine endliche Gruppe und $p\in\PZ$.
+  \begin{enumerate}[(i)]
+  \item $G$ enthält mindestens eine $p$-Sylowgruppe.
+  \item Je zwei $p$-Sylowgruppen von $G$ sind in $G$ konjugiert.
+  \item Jede $p$-Untergruppe von $G$ ist in einer $p$-Sylowgruppe von
+    $G$ enthalten.
+  \item Für $P\in\Syl_p(G)$ ist $\abs{\Syl_p(G)} = \abs{G\colon
+      N_G(P)}\mid\abs{G}$ und $\abs{\Syl_p(G)}\equiv 1\pmod{p}$.
+  \end{enumerate}
+  \begin{beweis}
+    \begin{enumerate}[(i)]
+    \item Induktion nach der Gruppenordnung $\abs{G}$: Im Fall
+      $p\nmid\abs{G}$ ist $\{1\} \in\Syl_p(G)$. Dann ist auch der
+      Induktionsanfang erledigt. Sei daher $p\mid\abs{G}$. Die
+      Konjugationsklassen von $G$ seien $K_1,\dotsc,K_t$. Dabei sei
+      $\abs{K_i} = 1$ für $i=1,\dotsc,s$ und $\abs{K_i}>1$ für
+      $i=s+1,\dotsc,t$. Für $i=1,\dotsc,t$ sei $x_i\in K_i$. Dann ist
+      $K_1\cup\dotsc\cup K_s = Z(G)$. Nach der Klassengleichung gilt:
+      \begin{gather*}
+        \abs{G} = \abs{K_1}+\dotsb+\abs{K_t}=\abs{Z(G)}+\abs{G\colon
+          C_G(x_{s+1})}+\dotsb+\abs{G\colon \C_G(x_t)}
+      \end{gather*}
+      Ist $p\nmid\abs{G\colon C_G(x_i)}$ für ein
+      $i\in\{s+1,\dotsc,t\}$, so enthält $C_G(x_i)$ wegen
+      $\abs{C_G(x_i)}<\abs{G}$ nach Induktion eine $p$-Sylowgruppe
+      $P$. Wegen $\abs{G\colon P}=\underbrace{\abs{G\colon
+          C_G(x_i)}}_{\not\equiv 0\pmod{p}} \cdot
+      \underbrace{\abs{C_G(x_i)\colon P}}_{\not\equiv 0\pmod{p}}\not\equiv
+      0\pmod{p}$ ist also $P\in\Syl_p(G)$. Daher können wir
+      $p\mid\abs{G\colon C_G(x_i)}$ für $i=s+1,\dotsc,t$
+      annehmen. Dann ist $p\mid\abs{Z(G)}$.
 	
-	\item Je zwei $p$-Sylowgruppen von $G$ sind in $G$ konjugiert.
+      Nach dem Satz von \textsc{Cauchy} (\autoref{satz:14.8}) enthält
+      $Z(G)$ ein Element der Ordnung $p$. Folglich ist
+      $Z\coloneqq\langle z\rangle \unlhd G$, und $\abs{G/Z}<\abs{G}$.
 	
-	\item Jede $p$-Untergruppe von $G$ ist in einer $p$-Sylowgruppe von $G$ enthalten.
+      Nach Induktion enthält $G/Z$ eine $p$-Sylowgruppe $P/Z$. Da
+      $\abs{P}=\abs{P/Z}\cdot\abs{Z}$ eine $p$-Potenz ist, ist $P$
+      eine $p$-Untergruppe von $G$. Wegen $\abs{G\colon
+        P}=\abs{G/Z\colon P/Z}\not\equiv 0\pmod{p}$ ist $P\in\Syl_p(G)$.
+    \item In Situation nach dem untenstehenden Punkt~(iii) sei
+      $Q\in\Syl_p(G)$. Dann ist $\abs{Q}=\abs{R}$ und $Q\leq
+      R\in\mathfrak{P}$, d.\,h. $Q=R\in\mathfrak{P}$. Also ist $Q$
+      konjugiert zu $P$.
 	
-	\item Für $P\in\Syl_p(G)$ ist $\abs{\Syl_p(G)} = \abs{G\colon
-            N_G(P)}\mid\abs{G}$ und $\abs{\Syl_p(G)}\equiv 1\pmod{p}$.
-\end{enumerate}
+    \item Sei $P\in\Syl_p(G)$ und
+      $\mathfrak{P}\coloneqq\{gPg^{-1}\colon g\in G\}$ die
+      Konjugationsklasse von $P$ in $G$. Also
+      $\mathfrak{P}\subseteq\Syl_p(G)$). Nach dem \autoref{bem:16.1} ist
+      \begin{gather*}
+        \abs{\mathfrak{P}} = \abs{G\colon N_G(P)}\mid\abs{G\colon P}
+      \end{gather*}
+      also $\abs{\mathfrak{P}}\not\equiv 0\pmod{p}$.
+	
+      Jede $p$-Untergruppe $Q$ von $G$ operiert auf $\mathfrak{P}$
+      durch Konjugation:
+      \begin{gather*}
+        (gPg^{-1})\coloneqq xgPg^{-1}x^{-1} = (xg)P(xg)^{-1}\ (x\in
+        Q,g\in G)
+      \end{gather*}
+      Die Länge jeder Bahn ist ein Teiler von $\abs{Q}$, also eine
+      $p$-Potenz. Wegen $p\nmid\abs{\mathfrak{P}}$ existiert eine Bahn
+      der Länge $1$, d.\,h. ein $R\in\mathfrak{P}$ mit $xRx^{-1}=R$
+      für alle $x\in Q$. Dann $Q\leq N_G(R)$ und $R\unlhd
+      N_G(R)$. Dann $QR\leq N_G(R)\leq G$. Dabei ist $R\leq QR$ und
+      $\abs{QR:R}=\abs{Q:Q\cap R}\mid\abs{Q}$ ist
+      $p$-Potenz. Andererseits: $\abs{QR:R}\mid\abs{G\colon
+        R}\not\equiv 0\pmod{p}$. Also: $\abs{QR:R}=1$, d.\,h. $Q\leq
+      QR=R\in\mathfrak{P}\subseteq\Syl_p(G)$.
+    \item Aus Punkt~(ii) folgt, $\Syl_p(G) = \mathfrak{P}$. Daher ist
+      $\abs{\Syl_p(G)} = \abs{\mathfrak{P}} = \abs{G\colon
+        N_G(P)}\mid\abs{G}$. Damit ist der erste Teil der Behauptung
+      bewiesen.
+	
+      Sei jetzt $Q=P$. Wir betrachten wieder die Operation von $Q=P$
+      auf $\mathfrak{P}=\Syl_p(G)$. Jede Bahn hat $p$-Potenzlänge. Ist
+      $\{R\}$ eine Bahn der Länge $1$, so ist wie oben $P\leq R$,
+      d.\,h. $P=R$. Also gibt es genau eine Bahn der Länge $1$,
+      nämlich $\{P\}$. Wir erhalten:
+      $\abs{\Syl_p(G)}=\abs{\mathfrak{P}}\equiv 1\pmod{p}$.
+    \end{enumerate}
+  \end{beweis}
 \end{satz}
-
-%%%%%%%%%%%%%%%%%%%
-% Beweis
-%%%%%%%%%%%%%%%%%%%
-\begin{beweis}
-\begin{enumerate}[(i)]
-	\item (Induktion nach Gruppenordnung $\abs{G}$)\\
-	Im Fall $p\nmid\abs{G}$ ist $\{1\} \in\Syl_p(G)$.
-	Dann ist auch der Induktionsanfang erledigt.\\
-	Sei $p\mid\abs{G}$.
-	Dei Konjugationsklassen von $G$ seien $K_1,\dotsc,K_t$;
-	dabei sei $\abs{K_i} = 1$ für $i=1,\dotsc,s$ und $\abs{K_i}>1$ für $i=s+1,\dotsc,t$.
-	Für $i=1,\dotsc,t$ sei $x_i\in K_i$.
-	Dann ist $K_1\cup\dotsc\cup K_s = Z(G)$.
-	Nch der Klassengleichung gilt:
-	\begin{gather*}\abs{G} = \abs{K_1}+\dotsb+\abs{K_t}=\abs{Z(G)}+\abs{G\colon C_G(x_{s+1})}+\dotsb+\abs{G\colon \C_G(x_t)}.\end{gather*}
-	Ist $p\nmid\abs{G\colon C_G(x_i)}$ für ein $i\in\{s+1,\dotsc,t\}$, so enthält $C_G(x_i)$ wegen $\abs{C_G(x_i)}<\abs{G}$ nach Induktion eine $p$-Sylowgruppe $P$.
-	Wegen $\abs{G\colon P}=\underbrace{\abs{G\colon C_G(x_i)}}_{\not\equiv 0\pmod{p}}\cdot\underbrace{\abs{C_G(x_i):P}}_{\not\equiv 0\pmod{p}}\not\equiv 0\pmod{p}$ ist also $P\in\Syl_p(G)$.\\
-	Daher können wir $p\mid\abs{G\colon C_G(x_i)}$ für $i=s+1,\dotsc,t$ annehmen.\\
-	Dann: $p\mid\abs{Z(G)}$.
-	
-	Nach \textsc{Cauchy} (\autoref{satz:14.8}) enthält $Z(G)$ ein Element der Ordnung $p$.
-	Folglich: $Z\coloneqq\langle z\rangle \unlhd G$, und $\abs{G/Z}<\abs{G}$.
-	
-	Nach Induktion enthält $G/Z$ eine $p$-Sylowgruppe $P/Z$.
-	Da $\abs{P}=\abs{P/Z}\cdot\abs{Z}$ eine $p$-Potenz ist, ist $P$ eine $p$-Untergruppe von $G$.
-	Wegen $\abs{G\colon P}=\abs{G/Z:P/Z}\not\equiv 0\pmod{p}$ ist $P\in\Syl_p(G)$.
-	
-	\item[(iii)] Sei $P\in\Syl_p(G)$ und $\mathfrak{P}\coloneqq\{gPg^{-1}\colon g\in G\}$ die Konjugationsklasse von $P$ in $G$ (also $\mathfrak{P}\subseteq\Syl_p(G)$).\\
-	Nach \autoref{bem:16.1} ist
-	\begin{gather*}\abs{\mathfrak{P}} = \abs{G\colon N_G(P)}\mid\abs{G\colon P},\end{gather*}
-	also $\abs{\mathfrak{P}}\not\equiv 0\pmod{p}$.
-	
-	Jede $p$-Untergruppe $Q$ von $G$ operiert auf $\mathfrak{P}$ durch Konjugation:
-	\begin{gather*}(gPg^{-1})\coloneqq xgPg^{-1}x^{-1} = (xg)P(xg)^{-1}\ (x\in Q,g\in G).\end{gather*}
-	Die Länge jeder Bahn ist ein Teiler von $\abs{Q}$, also eine $p$-Potenz.\\
-	Wegen $p\nmid\abs{\mathfrak{P}}$ existiert eine Bahn der Länge $1$, d.\,h. ein $R\in\mathfrak{P}$ mit $xRx^{-1}=R$ für alle $x\in Q$.
-	Dann $Q\leq N_G(R)$, und $R\unlhd N_G(R)$.\\
-	Dann $QR\leq N_G(R)\leq G$.
-	Dabei: $R\leq QR$, und $\abs{QR:R}=\abs{Q:Q\cap R}\mid\abs{Q}$ ist $p$-Potenz.
-	Andererseits: $\abs{QR:R}\mid\abs{G\colon R}\not\equiv 0\pmod{p}$.\\
-	Also: $\abs{QR:R}=1$, d.\,h. $Q\leq QR=R\in\mathfrak{P}\subseteq\Syl_p(G)$.
-	
-	\item[(ii)] In der obigen Situation sei $Q\in\Syl_p(G)$.
-	Dann $\abs{Q}=\abs{R}$ und $Q\leq R\in\mathfrak{P}$, d.\,h. $Q=R\in\mathfrak{P}$.\\
-	Also: $Q$ konjugiert zu $P$.
-	
-	\item[(iv)] Aus (ii) folgt $\Syl_p(G) = \mathfrak{P}$.
-	Daher $\abs{\Syl_p(G)} = \abs{\mathfrak{P}} = \abs{G\colon N_G(P)}\mid\abs{G}$.\\
-	Damit ist der erste Teil von (iv) bewiesen.
-	
-	Sei jetzt $Q=P$.
-	Wir betrachten wieder die Operation von $Q=P$ auf $\mathfrak{P}=\Syl_p(G)$.
-	Jede Bahn hat $p$-Potenzlänge.
-	Ist $\{R\}$ eine Bahn der Länge $1$, so ist wie oben $P\leq R$, d.\,h. $P=R$.
-	Also gibt es genau eine Bahn der Länge $1$, nämlich $\{P\}$.\\
-	Wir erhalten: $\abs{\Syl_p(G)}=\abs{\mathfrak{P}}\equiv 1\pmod{p}$.
-\end{enumerate}
-\end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
 % Satz 16.2
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}
-Sei $G$ eine endliche Gruppe und $N\unlhd G$.
-Für $p\in\PZ$ und $P\in\Syl_p(G)$ ist dann $P\cap N\in\Syl_p(N)$ und $PN/N\in\Syl_p(G/N)$.
+  Sei $G$ eine endliche Gruppe und $N\unlhd G$.  Für $p\in\PZ$ und
+  $P\in\Syl_p(G)$ ist dann $P\cap N\in\Syl_p(N)$ und
+  $PN/N\in\Syl_p(G/N)$.
+  \begin{beweis}
+    Wegen $\abs{P\cap N}\mid\abs{P}$ ist $\abs{P\cap N}$ eine
+    $p$-Potenz und wegen $\abs{N\colon N\cap P} = \abs{PN\colon
+      P}\mid\abs{G\colon P}$ ist $p\nmid\abs{N\colon N\cap P}$. Daher
+    folgt, $P\cap N\in\Syl_p(N)$. Wegen $\abs{PN/N} = \abs{P/P\cap
+      N}\mid\abs{P}$ ist $\abs{PN/N} = \abs{G\colon
+      PN}\mid\abs{G\colon P}$ ist $\abs{G/N\colon PN/N}\not\equiv
+    0\pmod{p}$. Also gilt, $PN/N\in\Syl_p(G/N)$.
+  \end{beweis}
 \end{satz}
-
-%%%%%%%%%%%%%%%%%%%
-% Beweis
-%%%%%%%%%%%%%%%%%%%
-\begin{beweis}
-Wegen $\abs{P\cap N}\mid\abs{P}$ ist $\abs{P\cap N}$ eine $p$-Potenz.
-Wegen $\abs{N:N\cap P} = \abs{PN:P}\mid\abs{G\colon P}$ ist $p\nmid\abs{N:N\cap P}$.
-Daher: $P\cap N\in\Syl_p(N)$.
-Wegen $\abs{PN/N} = \abs{P/P\cap N}\mid\abs{P}$ ist $\abs{PN/N} = \abs{G\colon PN}\mid\abs{G\colon P}$ ist $\abs{G/N:PN/N}\not\equiv 0\pmod{p}$.\\
-Also: $PN/N\in\Syl_p(G/N)$.
-\end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
 % Bemerkung 16.2
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}
-Für $H\leq G$ gilt im Allgemeinen nicht: $H\cap P\in\Syl_p(H)$.
+  Für $H\leq G$ gilt im Allgemeinen nicht: $H\cap P\in\Syl_p(H)$.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
 % Satz 16.3
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}[Frattini-Argument]
-Sei $G$ eine endliche Gruppe, $N\unlhd G$ und $P\in\Syl_p(N)$.\\
-Dann ist $G=N\cdot N_G(P)$.
+  Sei $G$ eine endliche Gruppe, $N\unlhd G$ und $P\in\Syl_p(N)$. Dann
+  ist $G=N\cdot N_G(P)$.
+  \begin{beweis}
+    Für $g\in G$ ist $gPg^{-1}\leq gNg^{-1}=N$,
+    d.\,h. $gPg^{-1}\in\Syl_p(N)$. Nach dem Satz von \textsc{Sylow}
+    (\autoref{satz:16.1}) existiert ein $h\in N$ mit
+    $hgPg^{-1}h^{-1}=P$.  Daher ist $hg\in N_G(P)$ und $g=h^{-1}hg\in
+    N\cdot N_G(P)$.
+  \end{beweis}
 \end{satz}
-
-%%%%%%%%%%%%%%%%%%%
-% Beweis
-%%%%%%%%%%%%%%%%%%%
-\begin{beweis}
-Für $g\in G$ ist $gPg^{-1}\leq gNg^{-1}=N$, d.\,h. $gPg^{-1}\in\Syl_p(N)$.\\
-Nach Sylow (\autoref{satz:16.1}) existiert ein $h\in N$ mit $hgPg^{-1}h^{-1}=P$.
-Daher ist $hg\in N_G(P)$ und $g=h^{-1}hg\in N\cdot N_G(P)$.
-\end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
 % Satz 16.4
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:16.4}
-Für $p,q,r\in\PZ$ ist jede Gruppe $G$ de Ordnung $pq$ oder $pqr$ auflösbar.
-\end{satz}
+  Für $p,q,r\in\PZ$ ist jede Gruppe $G$ der Ordnung $pq$ oder $pqr$
+  auflösbar.
+  \begin{beweis}
+    \begin{enumerate}[(i)]
+    \item Sei $\abs{G}=pq$. \OE{} nehmen wir an, dass $p>q$ wegen
+      \autoref{satz:15.7}. Nach dem Satz von \textsc{Sylow}
+      (\autoref{satz:16.1}) ist $\abs{\Syl_p(G)}\mid pq$ und
+      $\abs{\Syl_p(G)} \equiv 1\pmod{p}$, also $\abs{\Syl_p(G)} \in
+      \{1,q\}$. Wegen $q<p$ ist $p\nmid q-1$, d.\,h. $q\not\equiv
+      1\pmod{p}$. Daher\footnote{Wichtiger Trick!} ist
+      $\abs{\Syl_p(G)} = 1$, d.\,h. $G$ enthält genau eine
+      $p$-Sylowgruppe $P$. Dann ist $\abs{G\colon N_G(P)} = 1$,
+      d.\,h. $G=N_G(P)$, d.\,h. $P\unlhd G$. Wegen $\abs{P}=p$ und
+      $\abs{G/P}=q$ sind $P$ und $G/P$ auflösbar, also auch $G$.
+    \item Sei $\abs{G}=p^2q$ und \OE{} $q\neq p$ nach dem
+      \autoref{satz:15.7}. Der Satz von \textsc{Sylow}
+      (\autoref{satz:16.1}) ergibt $\abs{\Syl_p(G)}\in\{1,q\}$ und
+      $\abs{\Syl_p(G)}\in\{1,p,p^2\}$. Im Fall $\abs{\Syl_p(G)} = 1$
+      enthält $G$ genau eine $p$-Sylowgruppe $P$ und wie in (i) ist
+      $P\unlhd G$. Wegen $\abs{P}=p^2$ und $\abs{G/P}=q$ sind $P$ und
+      $G/P$ auflösbar, also auch $G$.
+      
+      Sei also $\abs{\Syl_p(G)}=q$. Dann ist $q\equiv 1\pmod{p}$,
+      d.\,h. $p\mid q-1$. Somit $p<q$ und $q\nmid p-1$,
+      d.\,h. $p\equiv 1\pmod{p}$, d.\,h. $\abs{\Syl_p(G)}\neq p$. Im
+      Fall $\abs{\Syl_p(G)}=1$ enthält $G$ genau eine $q$-Sylowgruppe
+      $Q$. Wie in obigen Punkt~(i) ist $Q\unlhd G$. Wegen $\abs{Q}=q$
+      und $\abs{G/Q}=p^2$ sind $Q$ und $G/Q$ auflösbar, also auch
+      $G$. Also: $\abs{\Syl_p(G)}=p^2$. Für verschiedene
+      $Q_1,Q_2\in\Syl_p(G)$ ist $\abs{Q_1\cap Q_2}<\abs{Q_1}=q$,
+      d.\,h. $\abs{Q_1\cap Q_2}=1$. Daher enthalten die
+      $q$-Sylowgruppen von $G$ insgesamt $1+p^2(q-1)=p^2q-p^2+1$
+      Elemente. Andererseits enthält jede $p$-Sylowgruppe genau
+      $p^2$~Elemente. Daher ist nur noch Platz für eine einzige
+      $p$-Sylowgruppe. Dies steht im Widerspruch zu $\abs{\Syl_p(G)}=q$.
+    \item Sei $\abs{G}=qpr$ mit $p>q>r$. Enhält $G$ genau eine
+      $p$-Sylowgruppe $P$, so ist wie in (i) $P\unlhd G$. Wegen
+      $\abs{P}=p$ und $\abs{G/P}=qr$ sind $P$ und $G/P$ auflösbar,
+      also auch $G$.
 
-%%%%%%%%%%%%%%%%%%%
-% Beweis
-%%%%%%%%%%%%%%%%%%%
-\begin{beweis}
-\begin{enumerate}[(i)]
-	\item Sei $\abs{G}=pq$, \OE{} $p>q$ wegen \autoref{satz:15.7}.
-	Nach Sylow (\autoref{satz:16.1}) ist $\abs{\Syl_p(G)}\mid pq$ und $\abs{\Syl_p(G)} \equiv 1\pmod{p}$, also $\abs{\Syl_p(G)} \in \{1,q\}$.
-	Wegen $q<p$ ist $p\nmid q-1$, d.\,h. $q\not\equiv 1\pmod{p}$.\\
-	Daher\footnote{!Wichtiger Trick!} $\abs{\Syl_p(G)} = 1$, d.\,h. $G$ enthält genau eine $p$-Sylowgruppe $P$.
-	Dann: $\abs{G\colon N_G(P)} = 1$, d.\,h. $G=N_G(P)$, d.\,h. $P\unlhd G$.
-	Wegen $\abs{P}=p$ und $\abs{G/P}=q$ sind $P$ und $G/P$ auflösbar, also auch $G$.
-	
-	\item Sei $\abs{G}=p^2q$, \OE{} $q\neq p$ nach \autoref{satz:15.7}.
-	Nach Sylow (\autoref{satz:16.1}) ist $\abs{\Syl_p(G)}\in\{1,q\}$ und $\abs{\Syl_p(G)}\in\{1,p,p^2\}$.\\
-	Im Fall $\abs{\Syl_p(G)} = 1$ enthält $G$ genau eine $p$-Sylowgruppe $P$, und wie in (i) ist $P\unlhd G$.
-	Wegen $\abs{P}=p^2$ und $\abs{G/P}=q$ sind $P$ und $G/P$ auflösbar, also auch $G$.
-	
-	Sei also $\abs{\Syl_p(G)}=q$.
-	Dann: $q\equiv 1\pmod{p}$, d.\,h. $p\mid q-1$.
-	Also $p<q$.
-	Folglich: $q\nmid p-1$, d.\,h. $p\equiv 1\pmod{p}$, d.\,h. $\abs{\Syl_p(G)}\neq p$.\\
-	Im Fall $\abs{\Syl_p(G)}=1$ enthält $G$ genau eine $q$-Sylowgruppe $Q$.
-	Wie in (i) ist $Q\unlhd G$.
-	Wegen $\abs{Q}=q$ und $\abs{G/Q}=p^2$ sind $Q$ und $G/Q$ auflösbar, also auch $G$.\\
-	Also: $\abs{\Syl_p(G)}=p^2$.
-	Für verschiedene $Q_1,Q_2\in\Syl_p(G)$ ist $\abs{Q_1\cap Q_2}<\abs{Q_1}=q$, d.\,h. $\abs{Q_1\cap Q_2}=1$.
-	Daher enthalten die $q$-Sylowgruppen von $G$ insgesamt $1+p^2(q-1)=p^2q-p^2+1$ Elemente.
-	Andererseits enthält jede $p$-Sylowgruppe genau $p^2$ Elemente.
-	Daher ist nur noch Platz für eine einzige $p$-Sylowgruppe.
-	Widerspruch zu $\abs{\Syl_p(G)}=q$.
-	
-	\item Sei $\abs{G}=qpr$ mit $p>q>r$.\\
-	Enhält $G$ genau eine $p$-Sylowgruppe $P$, so ist wie in (i) $P\unlhd G$.
-	Wegen $\abs{P}=p$ und $\abs{G/P}=qr$ sind $P$ und $G/P$ auflösbar;
-	also auch $G$.
-	
-	Daher können wir $\abs{\Syl_p(G)}\neq 1$ und analog $\abs{\Syl_q(G)}\neq 1\neq \abs{\Syl_r(G)}$ annehmen.
-	Dann: $\abs{\Syl_p(G)}\equiv 1\pmod{p}$ und $\abs{\Syl_p(G)}\mid qr$, also $\abs{\Syl_p(G)}=qr$.
-	Analog ist $\abs{\Syl_q(G)}\geq p$ und $\abs{\Syl_r(G)}\geq q$.
-	Wie in (ii) schneiden sich je zwei Sylowgruppen von $G$ trivial.
-	Daher enthält $G$ gneau $qr(p-1)$ Elemente der Ordnung $p$, mindestens $p(q-1)$ Elemente der Ordnung $q$ und mindestens $q(r-1)$ Elemente der Ordnung $r$.\\
-	Also: $pqr=\abs{G}\geq 1+qr(p-1)+p(q-1)+q(r-1) = pqr+(p-1)(q-1)>pqr$. Widerspuch!
-\end{enumerate}
-\end{beweis}
+      Daher können wir $\abs{\Syl_p(G)}\neq 1$ und analog
+      $\abs{\Syl_q(G)}\neq 1\neq \abs{\Syl_r(G)}$ annehmen. Dann:
+      $\abs{\Syl_p(G)}\equiv 1\pmod{p}$ und $\abs{\Syl_p(G)}\mid qr$,
+      also $\abs{\Syl_p(G)}=qr$. Analog ist $\abs{\Syl_q(G)}\geq p$
+      und $\abs{\Syl_r(G)}\geq q$. Wie in (ii) schneiden sich je zwei
+      Sylowgruppen von $G$ trivial. Daher enthält $G$ genau
+      $qr(p-1)$~Elemente der Ordnung $p$, mindestens $p(q-1)$~Elemente
+      der Ordnung $q$ und mindestens $q(r-1)$~Elemente der Ordnung
+      $r$. Also: $pqr=\abs{G}\geq 1+qr(p-1)+p(q-1)+q(r-1) =
+      pqr+(p-1)(q-1)>pqr$. \lightning{}
+    \end{enumerate}
+  \end{beweis}
+\end{satz}
 
 %%%%%%%%%%%%%%%%%%%
 % Bemerkung 16.3
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}
-Man kann zeigen, dass jede Gruppe quadratfreier Ordnung auflösbar ist.
+  Man kann zeigen, dass jede Gruppe quadratfreier Ordnung auflösbar ist.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
 % Satz 16.5
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}
-Für $p,q\in\PZ$ ist jede Gruppe $G$ der Ordnung $p^2q^2$ auflösbar.
+  Für $p,q\in\PZ$ ist jede Gruppe $G$ der Ordnung $p^2q^2$ auflösbar.
+  \begin{beweis}
+    Sei \OE{} $p>q$. Besitzt $G$ einen Normalteiler $1<N<G$, so sind
+    $N$ und $G/N$ nach \autoref{satz:16.4} auflösbar. Daher ist auch
+    $G$ auflösbar.
+
+    Sei also $G$ einfach. Dann ist $\abs{\Syl_p(G)}\equiv 1\pmod{p}$
+    und $\abs{\Syl_p(G)}\mid q^2$, d.\,h. $\abs{\Syl_p(G)}=q^2$. Ist
+    $P_1\cap P_2=1$ für je 2 verschiedene $P_1,P_2\in\Syl_p(G)$, so
+    enthalten die $p$-Sylowgruppen insgesamt $q^2(p^2-1)=\abs{G}-q^2$
+    von $1$ verschiedene Elemente. Daher ist nur noch Platz für eine
+    einzige $q$-Sylowgruppe $Q$. Dann ist aber $Q\unlhd G$. \lightning{}
+
+    Es existieren also verschiedene $p$-Sylowgruppen $P_1,P_2$ von $G$
+    mit $D\coloneqq P_1\cap P_2 \neq 1$. Für $i=1,2$ ist
+    $\abs{P_i}=p^2$, d.\,h. $P_i$ abelsch. Insbesondere ist $D\unlhd
+    P_i$ und $P_i<N_G(D)<G$, d.\,h. $\abs{N_G(D)}=p^2q$. Nach
+    Übungsaufgabe~52\todo{Link einbauen} ist $N_G(D)\unlhd
+    G$. \lightning{}
+  \end{beweis}
 \end{satz}
-
-%%%%%%%%%%%%%%%%%%%
-% Beweis
-%%%%%%%%%%%%%%%%%%%
-\begin{beweis}
-\OE{} $p>q$.
-Besitzt $G$ einen Normalteiler $1<N<G$, so sind $N$ und $G/N$ nach \autoref{satz:16.4} auflösbar.
-Daher ist auch $G$ auflösbar.
-
-Sei also $G$ einfach.
-Dann: $\abs{\Syl_p(G)}\equiv 1\pmod{p}$ und $\abs{\Syl_p(G)}\mid q^2$, d.\,h. $\abs{\Syl_p(G)}=q^2$.
-Ist $P_1\cap P_2=1$ für je 2 verschiedene $P_1,P_2\in\Syl_p(G)$, so enthalten die $p$-Sylowgruppen insgesamt $q^2(p^2-1)=\abs{G}-q^2$ von $1$ verschiedene Elemente.
-Daher ist nur noch Platz für eine einzige $q$-Sylowgruppe $Q$.
-Dann ist aber $Q\unlhd G$. Widerspruch!
-
-Es existieren also verschiedene $p$-Sylowgruppen $P_1,P_2$ von $G$
-mit $D\coloneqq P_1\cap P_2 \neq 1$.
-Für $i=1,2$ ist $\abs{P_i}=p^2$, d.\,h. $P_i$ abelsch.
-Insbesondere ist $D\unlhd P_i$ und $P_i<N_G(D)<G$, d.\,h. $\abs{N_G(D)}=p^2q$.
-Nach Übungsaufgabe~52 ist $N_G(D)\unlhd G$. Widerspruch!
-\end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
 % Satz 16.6
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:16.6}
-Gruppen der Ordnung $1,\dotsc,59$ sind auflösbar.
+  Gruppen der Ordnung $1,\dotsc,59$ sind auflösbar.
+  \begin{beweis}
+    Sei $G$ eine Gruppe mit $\abs{G}<60$. Nach den früheren
+    Erkenntnissen bleiben nur die Fälle $\abs{G}\in\{24,40,48,54,56\}$
+    übrig. Diese betrachten wir in der untenstehenden Liste.
+    \begin{enumerate}[(i)]
+    \item Sei $\abs{G}=24$ und $P\in\Syl_2(G)$, d.\,h. $\abs{P}=8$ und
+      $\abs{G\colon P}=3$. Die Übungsaufgabe~51\todo{Link einbauen}
+      liefert einen Homomorphismus $\rho\colon G\rightarrow
+      \Sym(G/P)\cong\Sym(3)$ und $K\coloneqq\ker(\rho)\leq P$, also
+      $\abs{K}\mid\abs{P}=8$. Daher ist $K$ auflösbar. Wegen
+      $\abs{G/K}=\abs{\rho(G)}\mid\abs{\Sym(3)}=6$ ist $G/K$ auflösbar
+      und damit ist auch $G$ auflösbar.
+    \item Für $\abs{G}=48$ geht der Nachweis analog.
+    \item Sei $\abs{G}=54=3^2\cdot 2$und $P\in\Syl_3(G)$. Dann
+      $\abs{P}=27$ und $\abs{G\colon P}=2$, d.\,h. $P\unlhd G$. Daher
+      sind $P$ und $G/P$ auflösbar, also auch $G$ auflösbar.
+    \item Sei $\abs{G}=40=2^3\cdot 5$ und $P\in\Syl_5(G)$. Wegen
+      $\abs{\Syl_5(G)}\equiv 1\pmod{5}$ und
+      $\abs{\Syl_5(G)}\in\{1,2,4,8\}$ ist $\abs{\Syl_5(G)}=1$. Daher
+      sind $P\unlhd G, P$ und $G/P$ auflösbar, also auch $G$ auflösbar.
+    \item Sei $\abs{G}=56=2^3\cdot 7$ und $P\in\Syl_7(G)$. Wegen
+      $\abs{\Syl_7(G)}\equiv 1\pmod{7}$ und
+      $\abs{\Syl_7(G)}\in\{1,2,4,8\}$ ist
+      $\abs{\Syl_7(G)}\in\{1,8\}$. Im Fall $\abs{\Syl_7(G)}=1$ sind
+      $P\unlhd G, P$ und $G/P$ auflösbar, also auch $G$ auflösbar.
+	
+      Sei also $\abs{\Syl_7(G)}=8$. Da sich je zwei verschiedene
+      $7$-Sylowgruppen von $G$ trivial schneiden, enthalten die
+      $7$-Sylowgruppen von $G$ insgesamt genau $8\cdot 6=48$ von $1$
+      verschiedene Elemente. Daher ist nur noch Platz für eine
+      einzige $2$-Sylowgruppe $Q$. Dann ist $Q\unlhd G$ und $Q$ sowie
+      $G/Q$ auflösbar, also auch $G$ auflösbar.
+    \end{enumerate}
+  \end{beweis}
 \end{satz}
-
-%%%%%%%%%%%%%%%%%%%
-% Beweis
-%%%%%%%%%%%%%%%%%%%
-\begin{beweis}
-Sei $G$ Gruppe mit $\abs{G}<60$.
-Nach den früheren Erkenntnissen bleiben nur die Fälle $\abs{G}\in\{24,40,48,54,56\}$ übrig.
-\begin{enumerate}[(i)]
-	\item Sei $\abs{G}=24$ und $P\in\Syl_2(G)$, d.\,h. $\abs{P}=8$ und $\abs{G\colon P}=3$.\\
-	Übungsaufgabe 51 liefert einen Homomorphismus $\rho\colon G\rightarrow \Sym(G/P)\cong\Sym(3)$ und $K\coloneqq\ker(\rho)\leq P$, also $\abs{K}\mid\abs{P}=8$.
-	Daher ist $K$ auflösbar.
-	Wegen $\abs{G/K}=\abs{\rho(G)}\mid\abs{\Sym(3)}=6$ ist $G/K$ auflösbar.\\
-	Also: $G$ auflösbar.
-	
-	\item $\abs{G}=48$: analog.
-	
-	\item $\abs{G}=54=3^2\cdot 2$.
-	Sei $P\in\Syl_3(G)$.
-	Dann $\abs{P}=27$ und $\abs{G\colon P}=2$, d.\,h. $P\unlhd G$.
-	Daher $P$ auflösbar, $G/P$ auflösbar.\\
-	Also: $G$ auflösbar.
-	
-	\item $\abs{G}=40=2^3\cdot 5$.
-	Sei $P\in\Syl_5(G)$.
-	Wegen $\abs{\Syl_5(G)}\equiv 1\pmod{5}$ und $\abs{\Syl_5(G)}\in\{1,2,4,8\}$ ist $\abs{\Syl_5(G)}=1$.
-	Daher $P\unlhd G$, $P$ auflösbar, $G/P$ auflösbar.\\
-	Also: $G$ auflösbar.
-	
-	\item $\abs{G}=56=2^3\cdot 7$.
-	Sei $P\in\Syl_7(G)$.
-	Wegen $\abs{\Syl_7(G)}\equiv 1\pmod{7}$ und $\abs{\Syl_7(G)}\in\{1,2,4,8\}$ ist $\abs{\Syl_7(G)}\in\{1,8\}$.
-	Im Fall $\abs{\Syl_7(G)}=1$ ist $P\unlhd G$, $P$ auflösbar, $G/P$ auflösbar.\\
-	Also: $G$ auflösbar.
-	
-	Sei also $\abs{\Syl_7(G)}=8$.
-	Da sich je zwei verschiedene $7$-Sylowgruppen von $G$ trivial schneiden, enthalten die $7$-Sylowgruppen von $G$ insgesamt genau $8\cdot 6=48$ von $1$ verschiedene Elemente.
-	Daher ist nur noch Platz für eine einzige $2$-Sylowgruppe $Q$.
-	Dann: $Q\unlhd G$, $Q$ auflösbar, $G/Q$ auflösbar.\\
-	Also: $G$ auflösbar.
-\end{enumerate}
-\end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
 % Satz 16.7
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}
-$\Alt(5)$ ist eine einfache Gruppe.
+  Die Gruppe $\Alt(5)$ ist einfach.
+  \begin{beweis}
+    Anderenfalls existiert ein Normalteiler $1<N<G\coloneqq\Alt(5)$.
+    Nach dem \autoref{satz:16.6} sind $N$ und $G/N$ auflösbar, also
+    auch $G$. \lightning{}
+  \end{beweis}
 \end{satz}
-
-%%%%%%%%%%%%%%%%%%%
-% Beweis
-%%%%%%%%%%%%%%%%%%%
-\begin{beweis}
-Anderenfalls existiert ein Normalteiler $1<N<G\coloneqq\Alt(5)$.
-Nach \autoref{satz:16.6} sind $N$ und $G/N$ auflösbar, also auch $G$. Widerspruch!
-\end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
 % Bemerkung 16.4
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}
-\begin{enumerate}[(i)]
-	\item Man kann zeigen, dass $\Alt(5)$ bis auf Isomorphie die einzige einfache Gruppe der Ordnung $60$ ist.
-	
-	\item Man kann zeigen, dass $\Alt(n)$ für alle $n\geq 5$ einfach ist.
-\end{enumerate}
+  \begin{enumerate}[(i)]
+  \item Man kann zeigen, dass $\Alt(5)$ bis auf Isomorphie die einzige
+    einfache Gruppe der Ordnung $60$ ist.
+  \item Man kann zeigen, dass $\Alt(n)$ für alle $n\geq 5$ einfach sind.
+  \end{enumerate}
 \end{bem}
 
 %\include{Kapitel17}
