Meckereien des Skriptcheck behoben
git-svn-id: https://svn.lug-jena.de/uni-skripte@2519 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -1848,7 +1848,7 @@ In dem Kapitel sei $K$ immer ein Körper.
 \end{satz}
 
 % Definition
-\begin{defi}[Homo-, Isomorphismus, etc.]
+\begin{defi}[Homo-, Isomorphismus etc.]
   Seien $K, L$ Körper. Eine Abbildung $f \colon K \rightarrow L$ mit
   $f(a+ b) = f(a) + f(b)$ und $f(a+b)= f(a)\cdot f(b)$ für $a, b
   \in K$ und $f(1) = 1$ nennt man \highl{Homomorphismus} (von
@@ -3986,7 +3986,7 @@ Dabei gelten folgende Begriffe:
 % Beispiel 11.1
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}\label{bsp:11.1}
-  Nach \ref{exer:18} ist $\Aut(\R) = \{\id_{\R}\}$.
+  Nach \autoref{exer:18} ist $\Aut(\R) = \{\id_{\R}\}$.
   Man kann zeigen, dass $\Aut(\C)$ überabzählbar ist. Nach
   \autoref{satz:7.8} ist $\Aut(\F_{p^n}) = \langle f\rangle$ zyklisch
   der Ordnung $n$ für $p \in \PZ$, $n \in \N$. Dabei ist $f\colon
