--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -6821,7 +6821,8 @@ $g = \begin{pmatrix}1 & 2 & 3\\ 3 & 2 & 1\end{pmatrix} \Rightarrow gs_1 = \begin
 \begin{satz}[Satz von \textsc{Wedderburn} 1905]
   Jeder endliche Schiefkörper $D$ ist kommutativ, d.\,h. ein Körper.
   \begin{beweis}
-    Der Beweis stammt von \textsc{Witt}\todo{Info zu Witt einbauen}.
+    Der Beweis stammt von dem deutschen Mathematiker \textsc{Ernst
+      Witt} (1911--1991). 
     Für $x\in D$ heißt $C_D(x)\coloneqq\Set{c\in D | cx=xc}$ der
     \highl[Schiefkörper!Zentralisator]{Zentralisator}\index{Zentralisator}
     von $x$ in $D$. Offenbar ist $C_D(x)$ ein "`Teilschiefkörper"' von
