Umgebung geändert, hat kein label
git-svn-id: https://svn.lug-jena.de/uni-skripte@2521 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -3366,11 +3366,10 @@ Dabei gelten folgende Begriffe:
     a, b \in H \Rightarrow ab \in H, a^{-1} \in H
   \end{gather}
   Man schreibt dann: $H \leq G$, im Fall $H \neq G$ auch $H < G$.  Die
-  Bedingung \autoref{eq:102-1} ist äquivalent zu der Bedingung:
-  \begin{gather}
-    \
+  Bedingung in \autoref{eq:102-1} ist äquivalent zu der Bedingung:
+  \begin{gather*}
     a, b \in H \Rightarrow ab^{-1} \in H
-  \end{gather}
+  \end{gather*}
   Jede Untergruppe $H$ von $G$ enthält das neutrale Element von
   $G$\footnote{Untergruppen sind nicht leer!}.
   Jede Untergruppe von $G$ wird mit der entsprechend eingeschränkten
