Umstellung auf index statt makeidx
git-svn-id: https://svn.lug-jena.de/uni-skripte@2543 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/haberland-zahlen/skript.latex
+++ b/haberland-zahlen/skript.latex
@@ -21,7 +21,7 @@
                           % oder solche, die man nicht in LaTeX verwenden
                           % soll -- l2tabu-Checker in LaTeX
 \usepackage{ifthen}
-\usepackage{makeidx}
+\usepackage{index}
 \usepackage[final]{graphicx}  % Für Grafiken
 \usepackage[draft=false,colorlinks,bookmarksnumbered,linkcolor=blue,breaklinks]{hyperref}
 
