Umstellung auf index
git-svn-id: https://svn.lug-jena.de/uni-skripte@2546 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schumacher-statver/skript.ltx
+++ b/schumacher-statver/skript.ltx
@@ -19,7 +19,7 @@
 \documentclass[ngerman,draft,parskip=half*,twoside]{scrreprt}
 
 \usepackage{ifthen}
-\usepackage{makeidx}
+\usepackage{index}
 % \usepackage[final]{graphicx}  % Für Grafiken
 \usepackage{xcolor}
 \usepackage[draft=false,colorlinks,bookmarksnumbered,linkcolor=blue,breaklinks]{hyperref}
