--- a/zaehle-topologie/skript.ltx
+++ b/zaehle-topologie/skript.ltx
@@ -22,7 +22,7 @@
 \documentclass[normalheadings,ngerman,draft,parskip=half*,twoside]{scrreprt}
 
 \usepackage{ifthen}
-\usepackage{makeidx}
+\usepackage{index}
 \usepackage{xcolor}
 \usepackage[draft=false,colorlinks,bookmarksnumbered,linkcolor=blue,breaklinks]{hyperref}
 
