Umstellung auf index
git-svn-id: https://svn.lug-jena.de/uni-skripte@2548 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-ana3/skript.latex
+++ b/schmeisser-ana3/skript.latex
@@ -10,7 +10,7 @@
 \documentclass[halfparskip*,german,draft,twoside]{scrreprt}
 
 \usepackage{ifthen}
-\usepackage{makeidx}
+\usepackage{index}
 \usepackage[final]{graphicx}
 \usepackage{color}
 \usepackage[draft=false,colorlinks,bookmarksnumbered,linkcolor=blue,breaklinks]{hyperref}
