--- a/vogel-krypt/skript.latex
+++ b/vogel-krypt/skript.latex
@@ -35,7 +35,7 @@
 \documentclass[ngerman,draft,twoside]{scrreprt}
 
 \usepackage{ifthen}
-\usepackage{makeidx}
+\usepackage{index}
 \usepackage[final]{graphicx}  % Für Grafiken
 \usepackage{xcolor}
 \usepackage[draft=false,colorlinks,bookmarksnumbered,linkcolor=blue,breaklinks]{hyperref}
