Umstellung auf index
git-svn-id: https://svn.lug-jena.de/uni-skripte@2557 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/weber-funktionentheorie/skript.ltx
+++ b/weber-funktionentheorie/skript.ltx
@@ -23,8 +23,7 @@
 \documentclass[ngerman,draft,parskip=half*,twoside]{scrreprt}
 
 \usepackage{ifthen}
-\usepackage{makeidx}
-% \usepackage[final]{graphicx}  % Für Grafiken
+\usepackage{index}
 \usepackage{xcolor}
 \usepackage[draft=false,colorlinks,bookmarksnumbered,linkcolor=blue,breaklinks]{hyperref}
 
