--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -54,7 +54,7 @@
 \documentclass[parskip=half*,english,ngerman,draft,twoside]{scrreprt}
 
 \usepackage{ifthen}
-\usepackage{makeidx}
+\usepackage{index}
 \usepackage[final]{graphicx}  % Für Grafiken
 \usepackage{xcolor}
 \usepackage[draft=false,colorlinks,bookmarksnumbered,linkcolor=blue,breaklinks]{hyperref}
