--- a/carl-hoehereana1/skript.ltx
+++ b/carl-hoehereana1/skript.ltx
@@ -19,7 +19,7 @@
 \documentclass[normalheadings,ngerman,draft,parskip=half*,twoside]{scrreprt}
 
 \usepackage{ifthen}
-\usepackage{makeidx}
+\usepackage{index}
 \usepackage{xcolor}
 \usepackage[draft=false,colorlinks,bookmarksnumbered,linkcolor=blue,breaklinks]{hyperref}
 
